--- a/ܐܝܪܐܢ.mw
+++ b/ܐܝܪܐܢ.mw
@@ -39,9 +39,9 @@
 '''ܐܝܪܐܢ''' ([[ܠܫܢܐ ܦܪܣܝܐ|ܦܪܣܐܝܬ]]: ايران) ܗܝ [[ܐܬܪܐ]] ܒ[[ܐܣܝܐ (ܝܒܫܬܐ)|ܐܣܝܐ]]܂ ܐܝܪܐܢ ܐܝܬ ܠܗ ܬܚܘܡܐ ܥܡ [[ܥܝܪܐܩ]] ܘܥܡ [[ܛܘܪܩܝܐ]] ܘܥܡ [[ܐܪܡܢܝܐ]] ܘܥܡ [[ܐܙܪܒܝܓܐܢ]] ܘܥܡ [[ܛܘܪܩܡܢܣܛܐܢ]] ܘܥܡ [[ܐܦܓܐܢܣܛܐܢ]] ܘܥܡ [[ܦܐܩܣܛܐܢ]]܂ ܐܢܫ̈ܐ ܒܐܝܪܐܢ ܢܡܠܠܘܢ ܦܪܣܐܝܬ܂ ܬܘܕܝܬܐ ܪܘܫܡܝܬܐ ܕܐܝܪܐܢ ܗܝ [[ܡܫܠܡܢܘܬܐ]] [[ܫܝܥܐ|ܫܝܥܝܬܐ]]܀
 
 == ܫܡܐ ==
-ܩܕܡܐܝܬ ܫܡܐ ܕܐܝܪܢ ܗܘܐ [[ܦܪܣ]]܂ ܒܫܢܬܐ ܕ1935 [[ܫܐܗ]] ܕܐܝܪܢ [[ܪܙܐ ܦܗܠܒܝ]] ܐܡܪ ܕܟܠܗܘܢ ܐܬܪ̈ܘܬܐ ܕܡܥܪܒܐ ܢܫܚܠܦܘܢ ܫܡܐ ܕܦܪܣ ܠܐܝܪܢ܂ "ܐܝܪܢ" ܒܠܫܢܐ ܦܪܣܝܐ ܗܘ "ܐܪܥܐ ܕܐܝܪ̈ܢܝܐ"܀
+ܩܕܡܐܝܬ ܫܡܐ ܕܐܝܪܐܢ ܗܘܐ [[ܦܪܣ]]܂ ܒܫܢܬܐ ܕ1935 [[ܫܐܗ]] ܕܐܝܪܐܢ [[ܪܙܐ ܦܗܠܒܝ]] ܐܡܪ ܕܟܠܗܘܢ ܐܬܪ̈ܘܬܐ ܕܡܥܪܒܐ ܢܫܚܠܦܘܢ ܫܡܐ ܕܦܪܣ ܠܐܝܪܐܢ܂ "ܐܝܪܐܢ" ܒܠܫܢܐ ܦܪܣܝܐ ܗܘ "ܐܪܥܐ ܕܐܝܪ̈ܐܢܝܐ"܀
 
-[[ܣܕܪܐ:ܐܝܪܢ| ]]
+[[ܣܕܪܐ:ܐܝܪܐܢ| ]]
 
 [[ace:Iran]]
 [[af:Iran]]
