--- a/ܡܘܚܡܕ.mw
+++ b/ܡܘܚܡܕ.mw
@@ -1,6 +1,6 @@
-[[ܠܦܦܐ:Siyer-i Nebi 298a.jpg|thumb|ܡܚܡܕ ܥܠ [[ܥܝܠܐ]] ܥܡ ܐܪܒܥܐ ܡܠܐܟ̈ܐ ܒܬܪܗ.]]
-'''ܡܘܚܡܕ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]]: محمد) ܗܘ [[ܢܒܝܐ]] ܚܪܝܐ ܒܓܘ ܬܘܕܝܬܐ ܕ[[ܐܣܠܡ]]. ܡܘܚܡܕ ܐܬܝܠܕ ܒܫܢܬܐ 571 ܒܡܕܝܢܬܐ ܕ[[ܡܝܟܘ]] ܘܡܝܬ ܒܫܢܬܐ 632 ܒܡܕܝܢܬܐ ܕ[[ܡܕܝܢܐ]]. 
-ܡܘܫܠܡܢܐ ܡܗܝܡܝܢ [[ܐܠܗܐ]] ܫܕܪ [[ܩܘܪܐܢ]] ܠܡܘܚܡܕ ܒܝܕ [[ܓܒܪܐܝܠ (ܡܠܐܟܐ)|ܓܒܪܐܝܠ]] [[ܡܠܐܟܐ]]. ܐܢ ܡܫܠܡܝ̈ܐ ܐܡܪܝܢ ܫܡܐ ܕܡܘܚܡܕ܇ ܐܡܪܝܢ ܒܬܪܗ: ܒܘܪ̈ܟܬܐ ܕܐܠܗܐ ܘܫܠܡܐ ܥܡܗ (صلى الله عليه و سلم)܀
+[[ܠܦܦܐ:Siyer-i Nebi 298a.jpg|thumb|ܡܘܚܡܕ ܥܠ [[ܥܝܠܐ]] ܥܡ ܐܪܒܥܐ ܡܠܐܟ̈ܝܢ ܒܬܪܗ.]]
+
+'''ܡܘܚܡܕ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]] مُحَمَّد) ܗܘ [[ܢܒܝܐ]] ܐܚܪܝܐ ܒܓܘ ܬܘܕܝܬܐ ܕ[[ܐܣܠܐܡ]]. ܡܘܚܡܕ ܐܬܝܠܕ ܒܫܢܬܐ 571 ܒܡܕܝܢܬܐ ܕ[[ܡܟܐ (ܡܕܝܢܬܐ)|ܡܟܐ]] ܘܡܝܬ ܒܫܢܬܐ 632 ܒܡܕܝܢܬܐ ܕ[[ܐܠܡܕܝܢܐ]]. ܡܫܠܡܢ̈ܐ ܡܗܝܡܢܝܢ ܕ[[ܐܠܗܐ]] ܫܕܪ [[ܩܘܪܐܢ]] ܠܡܘܚܡܕ ܒܝܕ [[ܓܒܪܐܝܠ (ܡܠܐܟܐ)|ܓܒܪܐܝܠ]] [[ܡܠܐܟܐ]]. ܐܢ ܡܫܠܡܝ̈ܐ ܐܡܪܝܢ ܫܡܐ ܕܡܘܚܡܕ܇ ܐܡܪܝܢ ܒܬܪܗ: ܒܘܪ̈ܟܬܐ ܕܐܠܗܐ ܘܫܠܡܐ ܥܡܗ (صلى الله عليه وسلم)܀
 
 [[ܣܕܪܐ:ܐܣܠܐܡ]]
 
