--- a/ܐܝܪܐܢ.mw
+++ b/ܐܝܪܐܢ.mw
@@ -36,7 +36,7 @@
 | ܡܬܒܝܢܢܘܬܐ =
 }}
 
-'''ܐܝܪܐܢ''' ([[ܠܫܢܐ ܦܪܣܝܐ|ܦܪܣܐܝܬ]]: ايران) ܗܝ [[ܐܬܪܐ]] ܒ[[ܐܣܝܐ (ܝܒܫܬܐ)|ܐܣܝܐ]]܂ ܐܝܪܐܢ ܐܝܬ ܠܗ ܬܚܘܡܐ ܥܡ [[ܥܝܪܐܩ]] ܘܥܡ [[ܛܘܪܩܝܐ]] ܘܥܡ [[ܐܪܡܢܝܐ]] ܘܥܡ [[ܐܙܪܒܝܓܐܢ]] ܘܥܡ [[ܛܘܪܩܡܢܣܛܐܢ]] ܘܥܡ [[ܐܦܓܐܢܣܛܐܢ]] ܘܥܡ [[ܦܐܩܣܛܐܢ]]܂ ܐܢܫ̈ܐ ܒܐܝܪܐܢ ܢܡܠܠܘܢ ܦܪܣܐܝܬ܂ ܬܘܕܝܬܐ ܪܘܫܡܝܬܐ ܕܐܝܪܐܢ ܗܝ [[ܡܫܠܡܢܘܬܐ]] [[ܫܝܥܐ|ܫܝܥܝܬܐ]]܀
+'''ܐܝܪܐܢ''' ܐܘ '''ܐܝܪܢ''' ([[ܠܫܢܐ ܦܪܣܝܐ|ܦܪܣܐܝܬ]]: ايران) ܗܝ [[ܐܬܪܐ]] ܒ[[ܐܣܝܐ (ܝܒܫܬܐ)|ܐܣܝܐ]]܂ ܐܝܪܐܢ ܐܝܬ ܠܗ ܬܚܘܡܐ ܥܡ [[ܥܝܪܐܩ]] ܘܥܡ [[ܛܘܪܩܝܐ]] ܘܥܡ [[ܐܪܡܢܝܐ]] ܘܥܡ [[ܐܙܪܒܝܓܐܢ]] ܘܥܡ [[ܛܘܪܩܡܢܣܛܐܢ]] ܘܥܡ [[ܐܦܓܐܢܣܛܐܢ]] ܘܥܡ [[ܦܐܩܣܛܐܢ]]܂ ܐܢܫ̈ܐ ܒܐܝܪܐܢ ܢܡܠܠܘܢ ܦܪܣܐܝܬ܂ ܬܘܕܝܬܐ ܪܘܫܡܝܬܐ ܕܐܝܪܐܢ ܗܝ [[ܡܫܠܡܢܘܬܐ]] [[ܫܝܥܐ|ܫܝܥܝܬܐ]]܀
 
 == ܫܡܐ ==
 ܩܕܡܐܝܬ ܫܡܐ ܕܐܝܪܐܢ ܗܘܐ [[ܦܪܣ]]܂ ܒܫܢܬܐ ܕ1935 [[ܫܐܗ]] ܕܐܝܪܐܢ [[ܪܙܐ ܦܗܠܒܝ]] ܐܡܪ ܕܟܠܗܘܢ ܐܬܪ̈ܘܬܐ ܕܡܥܪܒܐ ܢܫܚܠܦܘܢ ܫܡܐ ܕܦܪܣ ܠܐܝܪܐܢ܂ "ܐܝܪܐܢ" ܒܠܫܢܐ ܦܪܣܝܐ ܗܘ "ܐܪܥܐ ܕܐܝܪ̈ܐܢܝܐ"܀
