--- a/ܠܫܢܐ_ܐܪܡܝܐ.mw
+++ b/ܠܫܢܐ_ܐܪܡܝܐ.mw
@@ -1,129 +1,51 @@
-[[ܠܦܦܐ:Estrangela.jpg|thumb|300px|ܟܬܒܐ ܕܠܫܢܐ ܐܪܡܝܐ]]
+[[ܠܦܦܐ:Estrangela.jpg|thumb|300px|ܕܦܐ ܕܟܬܒܐ ܕܠܫܢܐ ܐܪܡܝܐ ܣܘܪܝܝܐ ܡܢ [[ܛܘܪܐ ܕܣܝܢܝ]] ܒ[[ܡܨܪܝܢ]] ܡܢ ܕܪܐ ܕܬܫܥܐ ܒܬܪ ܡܫܝܚܐ]]
 
-'''ܠܫܢܐ ܐܪܡܝܐ''' ܐܘ '''ܐܪܡܐܝܬ''' (ܐܪܡܝܐ܄ ארמית) ܗܘ [[ܠܫܢܐ (ܡܡܠܠܐ)|ܠܫܢ̈ܐ]] ܥܡ ܬܫܥܝܬܐ ܕ3000 ܫܢ̈ܝܐ܂ ܗܘܐ ܠܫܢܐ ܕܡܠܟܘ̈ܬܐ ܘܬܘܕ̈ܝܬܐ܂ ܥܡ [[ܠܫܢܐ ܥܒܪܝܐ]]܄ ܗܘܐ ܠܫܢܐ ܕܣܦܪ̈ܐ ܕ[[ܣܦܪܐ ܕܢܝܐܝܠ|ܕܢܝܐܝܠ]] ܘ[[ܣܦܪܐ ܥܙܪܐ|ܥܙܪܐ]] ܘܗܘ ܠܫܢܐ ܚܕܢܝܐ ܕ[[ܬܠܡܘܕ]]܂ ܐܪܡܝܐ ܗܘܐ ܠܫܢܐ ܕ[[ܝܫܘܥ]]܂ ܝܘܡܢܐ܄ ܐܪܡܝܐ ܗܘ ܠܫܢܐ ܕܟܠܕ̈ܝܐ܄ ܐܬܘܪ̈ܝܐ܄ ܡܪ̈ܘܢܝܐ܄ ܘܣܘܪ̈ܝܝܐ܀
+'''ܠܫܢܐ ܐܪܡܝܐ''' ܐܘ '''ܐܪܡܝܬ''' (ܐܪܡܝܐ ܐܘ ארמית ܐܘ ܐܚܪ̈ܢܐ) ܗܘ ܟܢܫܐ ܕ[[ܠܫܢܐ (ܡܡܠܠܐ)|ܠܫܢ̈ܐ]] ܐܘ ܕ[[ܠܥܙܐ|ܠܥܙ̈ܐ]] ܥܡ ܬܫܥܝܬܐ ܕܬܠܬܐ ܐܠܦܝ̈ܢ ܫܢ̈ܝܢ. ܗܘܐ ܠܫܢܐ ܕܡܠܟܘ̈ܬܐ ܘܕܬܘܕ̈ܝܬܐ. ܥܡ [[ܠܫܢܐ ܥܒܪܝܐ]] ܗܘܐ ܠܫܢܐ ܕܣܦܪ̈ܐ ܕ[[ܣܦܪܐ ܕܢܝܐܝܠ|ܕܢܝܐܝܠ]] ܘܕ[[ܣܦܪܐ ܥܙܪܐ|ܥܙܪܐ]] ܘܗܘ ܠܫܢܐ ܚܕܢܝܐ ܕ[[ܬܠܡܘܕ]]. ܐܪܡܝܐ ܗܘܐ ܠܫܢܐ ܕ[[ܝܫܘܥ|ܝܫܘܥ ܢܨܪܝܐ]]. ܝܘܡܢܐ ܐܪܡܝܐ ܗܘ ܠܫܢܐ ܕܐܬܘܪ̈ܝܐ ܘܕܟܠܕ̈ܝܐ ܘܕܡܪ̈ܘܢܝܐ ܘܕܣܘܪ̈ܝܝܐ܀
 
-ܐܪܡܝܐ ܗܘ ܕ[[ܠܫܢܐ ܐܦܪܘ-ܐܣܝܝܐ]] ܫܪܒܬܐ܂ ܒܗܕܐ ܫܪܒܬܐ ܗܘ ܓܘ [[ܠܫܢܐ ܫܝܡܝܐ]] ܫܪܒܬܐ ܙܥܘܪܬܐ܂ ܓܘ [[ܠܫܢܐ ܫܝܡܝܐ]] ܫܪܒܬܐ ܙܥܘܪܬܐ ܐܪܡܝܐ ܗܘ ܓܘ ܓܪܒܝܐ-ܡܥܪܒܐ ܠܫܢܐ ܫܝܡܝܐ ܥܡ [[ܠܫܢܐ ܟܢܥܢܝܐ]] (ܕܘܡܝ [[ܠܫܢܐ ܥܒܪܝܐ|ܥܒܪܝܐ]])܂ ܟܬܒ ܕܠܫܢܐ ܐܪܡܝܐ ܒܐܪܒܥ [[ܐܠܦܒܝܬ|ܐܠܦܒܝ̈ܬ]]: [[ܐܠܦܒܝܬ ܐܪܡܝܐ]]܄ [[ܐܠܦܒܝܬ ܣܘܪܝܝܐ]]܄ [[ܐܠܦܒܝܬ ܥܒܪܝܐ]]܄ ܘ[[ܐܠܦܒܝܬ ܡܢܕܝܐ]]܀
+ܐܪܡܝܐ ܗܘ ܕܫܪܒܬܐ ܕ[[ܠܫܢܐ ܐܦܪܘ-ܐܣܝܝܐ|ܠܫܢܐ ܐܦܪܘ-ܐܣܝ̈ܝܐ]]. ܒܗܕܐ ܫܪܒܬܐ ܗܘ ܒܫܪܒܬܐ ܙܥܘܪܬܐ ܕ[[ܠܫܢܐ ܫܝܡܝܐ|ܠܫܢ̈ܐ ܫܝܡܝ̈ܐ]]. ܒܠܫܢ̈ܐ ܫܝܡܝ̈ܐ ܐܪܡܝܐ ܗܘ ܒܠܫܢ̈ܐ ܫܝܡܝ̈ܐ ܡܥܪ̈ܒܝܐ ܓܪ̈ܒܝܝܐ ܥܡ [[ܠܫܢܐ ܟܢܥܢܝܐ|ܠܫܢ̈ܐ ܟܢܥܢ̈ܝܐ]] (ܐܝܟ [[ܠܫܢܐ ܥܒܪܝܐ|ܥܒܪܝܐ]] ܘܐܝܟ [[ܠܫܢܐ ܦܘܢܝܩܝܐ|ܦܘܢܝܩܝܐ]]). ܢܟܬܘܒ ܠܫܢܐ ܐܪܡܝܐ ܒܐܪܒܥ [[ܐܠܦܒܝܬ|ܐܠܦܒܝ̈ܬ]]: ܒ[[ܐܠܦܒܝܬ ܐܪܡܝܐ]] ܘܒ[[ܐܠܦܒܝܬ ܣܘܪܝܝܐ]] ܘܒ[[ܐܠܦܒܝܬ ܥܒܪܝܐ]] ܘܒ[[ܐܠܦܒܝܬ ܡܢܕܐܝܐ]]܀
 
 == ܓܐܘܓܪܦܝܐ ==
-ܒ[[ܫܢܬܐ ܡܐܐ ܕ12 ܩܕܡ ܡܫܝܚܐ]] [[ܐܢܫܐ ܐܪܡܝܐ|ܐܪ̈ܡܝܐ]] ܥܠܘܢ ܒܐܬܪ̈ܐ ܝܘܡܢܐ ܕ[[ܣܘܪܝܐ]]܄ [[ܥܝܪܐܩ]]܄ ܘ[[ܛܘܪܩܝܐ]] ܡܕܢܚܐ ([[ܒܝܬ ܢܗܪܝܢ]] ܓܪܒܝܐ)܂ ܐܪܡܝܐ ܦܪܣ ܥܠ ܡܕܢܚܐ ܕ[[ܕܩܠܬ]]܂ ܝܗܘܕ̈ܝܐ ܥܠܝ̈ܢ ܠܫܢܐ ܥܡܗܘܢ ܥܠ ܓܪܒܝܐ ܕ[[ܐܦܪܝܩܐ]] ܘ[[ܐܘܪܘܦܐ (ܝܒܫܬܐ)|ܐܘܪܘܦܐ]]܄ ܟܪ̈ܣܛܝܢܐ ܥܠܝ̈ܢ ܐܪܡܝܐ ܥܠ [[ܦܪܣ]]܄ [[ܗܢܕܘ]]܄ ܘ[[ܨܝܢ (ܐܪܥܐ)|ܨܝܢ]]܂ ܡܢ [[ܡܐܐ ܫܢܬܐ ܕ12 ܒܬܪ ܡܫܝܚܐ]]܄ ܠܫܢܐ ܐܡܗܝܐ ܕܒܝܬ ܢܗܪ̈ܝܢ ܗܘܐ [[ܠܫܢܐ ܥܪܒܝܐ]]܂ ܐܠܐ܄ ܐܪܡܝܐ ܗܘ ܠܫܢܐ ܬܘܕܝܬܢܬܐ ܕܝܗܘܕ̈ܝܐ܄ ܡܢܕ̈ܝܐ܄ ܘܟܪ̈ܣܛܝܢܐ܀ 
+ܒ[[ܕܪܐ ܕܬܪܥܣܪ ܩܕܡ ܡܫܝܚܐ]] [[ܥܡܐ ܐܪܡܝܐ|ܐܪ̈ܡܝܐ]] ܥܠܘ ܒܐܬܪ̈ܐ ܕܝܘܡܢܐ [[ܣܘܪܝܐ]] ܘ[[ܥܝܪܐܩ]] ܘ[[ܛܘܪܩܝܐ]] ܡܕܢܚܝܬܐ (ܓܪܒܝܐ ܕ[[ܒܝܬ ܢܗܪܝܢ|ܒܝܬ ܢܗܪ̈ܝܢ]]). ܠܫܢܐ ܐܪܡܝܐ ܦܪܣ ܥܠ ܡܕܢܚܐ ܕ[[ܕܩܠܬ]]. ܝܗܘܕ̈ܝܐ ܐܝܬܘ ܠܫܢܐ ܥܡܗܘܢ ܠܓܪܒܝܐ ܕ[[ܐܦܪܝܩܐ]] ܘܠ[[ܐܘܪܘܦܐ (ܝܒܫܬܐ)|ܐܘܪܘܦܐ]] ܘܡܫܝܚܝ̈ܐ ܐܝܬܘ ܐܪܡܝܐ ܠ[[ܦܪܣ]] ܘܠ[[ܗܢܕܘ]] ܘܠ[[ܨܝܢ (ܐܪܥܐ)|ܨܝܢ]]. ܡܢ [[ܕܪܐ ܕܬܪܥܣܪ ܒܬܪ ܡܫܝܚܐ]] ܠܫܢܐ ܐܡܗܝܐ ܕܒܝܬ ܢܗܪ̈ܝܢ ܗܘܐ [[ܠܫܢܐ ܥܪܒܝܐ]] ܐܠܐ ܐܪܡܝܐ ܗܘ ܠܫܢܐ ܬܘܕܝܬܢܐ ܕܝܗܘܕ̈ܝܐ ܘܕܡܢܕ̈ܐܝܐ ܘܕܡܫܝܚܝ̈ܐ܀ 
 
 === ܠܫܢ̈ܐ ܐܪ̈ܡܝܐ ===
-ܐܪܡܝܐ ܠܐ ܗܘ ܚܕ ܠܫܢܐ܄ ܐܠܐ ܠܫܢ̈ܐ ܣܓܝܐ̈ܐ܂ ܬܫܥܝܬܐ ܐܪܝܟܬܐ ܕܐܪܡܝܐ܄ ܟܬܒܐ ܪܒܐ܄ ܘܟܢܫ̈ܐ ܬܘܕܝܬܢܐ ܟܠ ܫܚܠܦ ܠܫܢܐ܂ ܐܪܡܝܐ ܐܝܬ ܠܗ ܫܡܗ̈ܐ ܣܓܝܐ̈ܐ: "[[ܠܫܢܐ ܣܘܪܝܝܐ]]" ܗܘ ܫܡܐ ܕܐܪܡܝܐ ܕܟܢܫ̈ܐ ܟܪ̈ܣܛܝܢܐ ܡܕܢܚܝܐ܂ ܣܓܝ ܠܫܢ̈ܐ ܗܘ "ܡܕܢܚܝܐ" ܐܘ "ܡܥܪܒܝܐ"܄ ܦܪܣܝܢ ܩܘܪܒܐ ܥܠ [[ܦܪܬ]]܂ ܐܦ ܐܝܬ ܠܫܢ̈ܐ ܐܪ̈ܡܝܐ ܝܘܡܢܐ ("ܐܪܡܝܐ ܚܕܬܐ")܄ ܐܪܡܝܐ ܟܬܒܢܝܐ܄ ܘܐܪܡܝܐ ܡܝܬܐ ܥܠ ܚܟܝ̈ܡܐ܂ ܫܡܗ̈ܐ ܕܟܠ ܠܫܢ̈ܐ ܐܪ̈ܡܝܐ ܡܨܝ ܗܘܐ "ܗܫܝܐ"܄ "ܡܨܥܝܐ"܄ ܘ"ܥܬܝܩܐ" ܙܒܢ̈ܐ܄ ܥܡ "ܡܕܢܚܝܐ" ܘ"ܡܥܪܒܝܐ"܀
+ܐܪܡܝܐ ܠܐ ܗܘ ܚܕ ܠܫܢ ܐܠܐ ܟܢܫܐ ܕܠܥܙ̈ܐ ܣܓܝܐ̈ܐ. ܬܫܥܝܬܐ ܐܪܝܟܬܐ ܕܐܪܡܝܐ ܘܟܬܒܗ ܪܒܐ ܘܟܢܫ̈ܐ ܬܘܕܝܬܢܐ ܟܠ ܫܚܠܦܘ ܠܫܢܐ. ܐܪܡܝܐ ܐܝܬ ܠܗ ܫܡܗ̈ܐ ܣܓܝܐ̈ܐ: "[[ܠܫܢܐ ܣܘܪܝܝܐ]]" ܗܘ ܫܡܐ ܕܐܪܡܝܐ ܕܟܢܫ̈ܐ ܡܫܝܚܝ̈ܐ ܡܕ̈ܢܚܝܐ. ܥܠ [[ܦܪܬ]] ܦܪܝܫ ܠܫܢܐ ܒܠܥܙ̈ܐ ܡܕ̈ܢܚܝܐ ܘܒܠܥܙ̈ܐ ܡܥܪ̈ܒܝܐ. ܐܦ ܐܝܬ ܠܫܢ̈ܐ ܐܪ̈ܡܝܐ ܝܘܡܢܐ ("ܐܪܡܝܐ ܚܕܬܐ") ܘܐܪܡܝܐ ܟܬܒܢܝܐ ܘܐܪܡܝܐ ܡܝܬܐ ܥܠ ܚܟܝ̈ܡܐ. ܦܪܝܫܝܢ ܠܥܙ̈ܐ ܐܪ̈ܡܝܐ ܒܬܫܥܝܬܐ ܒܫܡܗ̈ܐ ܕܚܕ̈ܬܐ ܘܕܡܨܥ̈ܝܐ ܘܕܥܬܝ̈ܩܐ܀
 
 == ܟܬܒܐ ==
-[[ܐܠܦܒܝܬ ܐܪܡܝܐ]] ܩܕܡܝܐ ܬܐ ܠܗ ܡܢ [[ܐܠܦܒܝܬ ܦܘܢܝܩܝܐ]]܂ ܥܡ ܙܒܢܐ܄ ܟܬܒܐ ܕܐܪܡܝܐ ܦܫ ܠܗ "ܪܒܥܝܐ"܂ ܐܝܣܪ̈ܠܝܐ ܥܬܝܩܐ ܘܐܚܪܢܐ ܐܢܫܐ ܕ[[ܟܢܥܢ]] ܫܩܠܗܘܢ ܗܕܐ ܐܠܦܒܝܬ ܥܠ ܟܬܒܗܘܢ ܠܫܢܗܘܢ܂ ܡܛܠ܄ ܝܘܡܢܐ ܫܡܗ ܗܘ [[ܐܠܦܒܝܬ ܥܒܪܝܐ]]܂ ܗܢܐ ܗܘ ܟܬܒܐ ܒܐܪܡܝܐ ܩܪܝܐ ܘܐܚܪܢܐ ܟܬܒܐ ܐܪܡܝܐ ܕܝܗܘܕ̈ܝܐ܀
+ܐܬܐ [[ܐܠܦܒܝܬ ܐܪܡܝܐ]] ܩܕܡܝܐ ܡܢ [[ܐܠܦܒܝܬ ܦܘܢܝܩܝܐ]]. ܡܢ ܒܬܪ ܦܫ "ܡܪܒܥ" ܟܬܒܐ ܕܐܪܡܝܐ. ܐܝܣܪ̈ܐܝܠܝܐ ܥܬܝ̈ܩܐ ܘܥܡ̈ܡܐ ܐܚܪ̈ܢܐ ܕ[[ܟܢܥܢ]] ܫܩܠܘ ܠܗܢܐ ܐܠܦܒܝܬ ܠܡܟܬܒ ܠܫܢܗܘܢ. ܡܛܠ ܕܗܕܐ ܝܘܡܢܐ ܫܡܗ ܕܗܢܐ ܐܠܦܒܝܬ ܗܘ [[ܐܠܦܒܝܬ ܥܒܪܝܐ]]. ܗܢܘ ܟܬܒܐ ܒܐܪܡܝܐ ܩܪܝܐ ܘܐܚܪܢܐ ܟܬܒܐ ܐܪܡܝܐ ܕܝܗܘܕ̈ܝܐ܀
 
-ܐܚܪܢܐ ܟܬܒܐ ܥܠ ܠܫܢܐ ܐܪܡܝܐ ܡܼܢ ܟܢܫ̈ܐ ܟܪ̈ܣܛܝܢܐ ܗܘ [[ܐܠܦܒܝܬ ܣܘܪܝܝܐ]]܀
+ܐܚܪܢܐ ܟܬܒܐ ܥܠ ܠܫܢܐ ܐܪܡܝܐ ܡܢ ܟܢܫ̈ܐ ܡܫܝܚܝ̈ܐ ܗܘ [[ܐܠܦܒܝܬ ܣܘܪܝܝܐ]]܀
 
-ܚܕܐ ܐܚܪܢܐ ܐܠܦܒܝܬ܄ [[ܐܠܦܒܝܬ ܡܢܕܝܐ]]܄ ܡܬܚܫܚܝ̈ܢ ܡܼܢ ܡܢܕ̈ܝܐ܀
+ܚܕ ܐܠܦܒܝܬ ܐܚܪܢܐ ܗܘ ܕ[[ܐܠܦܒܝܬ ܡܢܕܐܝܐ]] ܚܫܝܚ ܠܡܢܕ̈ܐܝܐ܀
 
-ܐܦ ܥܡ ܗܠܝܢ ܐܠܦܒܝ̈ܬ ܐܝܬ ܐܚܪܢܐ ܐܠܦܒܝ̈ܬ ܚܫܚ ܡܢ ܐܢܫܐ ܥܬܝܩܐ: [[ܐܢܫܐ ܢܒܛܝܐ|ܢܒܛܝ̈ܐ]] ܒ[[ܦܬܪܐ]] ܐܘ [[ܐܢܫܐ ܬܕܡܘܪܝܐ|ܬܕܡܘܪ̈ܝܐ]] ܒ[[ܬܕܡܘܪ]]܂ ܝܘܡܢܐ܄ [[ܠܫܢܐ ܛܘܪܝܐ]] ܡܨ ܟܬܒ ܒ[[ܐܠܦܒܝܬ ܠܐܛܝܢܝܐ]]܀
+ܐܦ ܥܡ ܗܠܝܢ ܐܠܦܒܝ̈ܬ ܐܝܬ ܐܠܦܒܝ̈ܬ ܐܚܪ̈ܢܐ ܕܚܫܝܚܝܢ ܠܥܡ̈ܡܐ ܐܚܪ̈ܢܐ: [[ܥܡܐ ܢܒܛܝܐ|ܢܒܛܝ̈ܐ]] ܒ[[ܦܛܪܐ]] ܘ[[ܥܡܐ ܬܕܡܘܪܝܐ|ܬܕܡܘܪ̈ܝܐ]] ܒ[[ܬܕܡܘܪ]]. ܝܘܡܢܐ ܐܢܫ ܡܨܐ ܠܡܟܬܒ [[ܠܫܢܐ ܛܘܪܝܐ]] ܒ[[ܐܠܦܒܝܬ ܠܐܛܝܢܝܐ]]܀
 
 == ܬܫܥܝܬܐ ==
-<!--
-{|border="0" align="left" margin="1" cellpadding="5" bgcolor="#ffffd9" style="margin-right:10px"
-|bgcolor="#ffffd9"|<timeline>
-ImageSize = width:320 height:700
-PlotArea = right:40 top:10 left:40 bottom:10
-DateFormat = yyyy
-TimeAxis = orientation:vertical order:reverse
-Period = from:-1200 till:2005
-AlignBars = early
-ScaleMajor = unit:year increment:200 start:-1200
-Colors = 
- id:canvas value:rgb(1,1,0.85) 
-BackgroundColors = canvas:canvas
-PlotData =
- width:15 color:red
- bar:test from:-1200 till:200 # Old Aramaic
-PlotData = 
- width:15 color:orange
- bar:test from:200 till:1200 # Middle Aramaic
-PlotData = 
- width:15 color:yellow
- bar:test from:1200 till:2005 # Modern Aramaic
-PlotData = 
- bar:test at:-1200 mark:(line,white)
- at:-1200 shift:(10,0) text:ܡܐܐ ܫܢܬܐ ܕ12 ܩܕܡ ܡܫܝܚܐ ܐܪ̈ܡܝܐ ܥܠܘܢ ܒܐܪܡ 
- bar:test at:-1000 mark:(line,white) 
- at:-1000 shift:(10,0) text:ܡܐܐ ܫܢܬܐ ܕ10 ܩܕܡ ܡܫܝܚܐ ܟܬܒܐ ܐܪܡܝܐ ܥܬܝܩܐ
- bar:test at:-740 mark:(line,white) 
- at:-740 shift:(10,0) text:740 ܩܕܡ ܡܫܝܚܐ ܐܪܡܝܐ ܪܘܫܡܝܐ ܓܘ ܐܬܘܪ
- bar:test at:-500 mark:(line,white) 
- at:-500 shift:(10,0) text: 500 ܩܕܡ ܡܫܝܚܐ ܕܪܝܘܫ ܩܕܡܝܐ ܐܡܪ ܐܪܡܝܐ ܪܘܫܡܝܐ
- bar:test at:-425 mark:(line,white)
- at:-425 shift:(10,0) text:ܡܐܐ ܫܢܬܐ ܕ5 ܩܕܡ ܡܫܝܚܐ ܟܪܛܝܣܐ ܐܠܦܢܬܝܢܝܐ ܡܟܢܐ
- bar:test at:-330 mark:(line,white) 
- at:-331 shift:(10,0) text:331 ܩܕܡ ܡܫܝܚܐ ܡܠܟܘܬܐ ܝܘܢܝܬܐ
- bar:test at:-246 mark:(line,white)
- at:-246 shift:(10,0) text:247 ܩܕܡ ܡܫܝܚܐ ܐܪܡܝܐ ܪܘܫܡܝܐ ܒܡܠܟܘܬܐ ܐܫܟܢܝܬܐ
- bar:test at:-169 mark:(line,white)
- at:-169 shift:(10,5) text:170 ܩܕܡ ܡܫܝܚܐ ܣܦܪܐ ܕܢܝܐܝܠ ܡܟܢܐ
- bar:test at:-141 mark:(line,white)
- at:-141 shift:(10,0) text:142 ܩܕܡ ܡܫܝܚܐ ܐܪܡܝܐ ܪܘܫܡܝܐ ܕܝܗܘܕܐ
- bar:test at:-49 mark:(line,white)
- at:-40 shift:(10,0) text:ܡܐܐ ܫܢܬܐ ܕ1 ܩܕܡ ܡܫܝܚܐ ܐܪܡܝܐ ܬܕܡܘܪ܄ ܦܬܪܐ܄ ܘܒܝܬ-ܐܘܪܗܝܐ
- bar:test at:45 mark:(line,white)
- at:45 shift:(10,0) text:ܡܐܐ ܫܢܬܐ ܕ1 ܒܬܪ ܡܫܝܚܐ ܦܫܝܛܬܐ
- bar:test at:135 mark:(line,white)
- at:135 shift:(10,4) text:135 Galilean Aramaic becomes prominent
- bar:test at:172 mark:(line,white)
- at:172 shift:(10,1) text:172 Tatian's Diatessaron produced
- bar:test at:200 mark:(line,white)
- at:200 shift:(10,-3) text:3rd c. Targum composition
- bar:test at:224 mark:(line,white)
- at:224 shift:(10,-8) text:224 Classical Mandaic emerges
- bar:test at:306 mark:(line,white)
- at:306 shift:(10,-1) text:c. 306 Ephrem born, Syriac golden age
- bar:test at:431 mark:(line,white)
- at:431 shift:(10,0) text:431 Nestorian schism of Aramaic Christians
- bar:test at:435 mark:(line,white)
- at:435 shift:(10,-9) text:c. 435 Peshitta Syriac Bible produced
- bar:test at:637 mark:(line,white)
- at:637 shift:(10,0) text:637 Arabic ascendancy
- bar:test at:700 mark:(line,white)
- at:700 shift:(10,0) text:700 Talmud completed
- bar:test at:1258 mark:(line,black)
- at:1258 shift:(10,0) text:1258 Mongols sack Baghdad
- bar:test at:1290 mark:(line,black)
- at:1290 shift:(10,-5) text:13th c. Zohar published in Spain
- bar:test at:1650 mark:(line,black)
- at:1650 shift:(10,0) text:17th c. School of Alqosh flourishes
- bar:test at:1836 mark:(line,black)
- at:1836 shift:(10,0) text:1836 Assyrian Neo-Aramaic first in print
- bar:test at:1915 mark:(line,black)
- at:1915 shift:(10,4) text:1915 Persecution in Turkey
- bar:test at:1951 mark:(line,black)
- at:1951 shift:(10,2) text:1951 Aramaic Jews move to Israel
- bar:test at:1998 mark:(line,black)
- at:1998 shift:(10,0) text:1998 last speakers of Mlahsô & Bijil die
-</timeline>
-|}-->
-ܐܝܬ ܬܠܬܐ ܙܒܢܐ ܒܬܫܥܝܬܐ ܕܠܫܢܐ ܐܪܡܝܐ: 
-* ܐܪܡܝܐ ܥܬܝܩܐ (1100 ܩܕܡ ܡܫܝܚܐ ܥܕܡܐ 200 ܒܬܪ ܡܫܝܚܐ)܄ ܥܡ:
-** ܐܪܡܝܐ ܟܬܒܢܝܐ ܕ[[ܬܢܟ]]܂ 
-** [[ܐܪܡܝܐ ܕܝܫܘܥ]]܂
-* ܐܪܡܝܐ ܡܨܥܝܐ (200 ܥܕܡܐ 1200)܄ ܥܡ:
-** ܟܬܒܐ ܕ[[ܠܫܢܐ ܣܘܪܝܝܐ|ܣܘܪܝܝܐ]]܂
-** ܐܪܡܝܐ ܕ[[ܬܠܡܘܕ]]܄ [[ܬܪܓܘܡ]]܄ ܘ[[ܡܕܪܫ]]܂
-* ܐܪܡܝܐ ܗܫܝܐ (1200 ܥܕܡܐ ܠܝܘܡܐ)܄ ܥܡ:
-** ܠܫܢ̈ܐ ܚܕ̈ܬܐ܂
+ܐܝܬ ܬܠܬܐ ܙܒܢ̈ܝܢ ܒܬܫܥܝܬܐ ܕܠܫܢܐ ܐܪܡܝܐ: 
+* ܐܪܡܝܐ ܥܬܝܩܐ (1100 ܩܕܡ ܡܫܝܚܐ ܥܕܡܐ ܠ200 ܒܬܪ ܡܫܝܚܐ) ܥܡ:
+** ܐܪܡܝܐ ܟܬܒܢܝܐ ܕ[[ܬܢܟ]]. 
+** [[ܐܪܡܝܐ ܕܝܫܘܥ]].
+* ܐܪܡܝܐ ܡܨܥܝܐ (200 ܥܕܡܐ ܠ1200) ܥܡ:
+** ܟܬܒܐ ܕ[[ܠܫܢܐ ܣܘܪܝܝܐ|ܣܘܪܝܝܐ]].
+** ܐܪܡܝܐ ܕ[[ܬܠܡܘܕ]] ܘܕ[[ܬܪܓܘܡ]] ܘܕ[[ܡܕܪܫ]].
+* ܐܪܡܝܐ ܚܕܬܐ (1200 ܥܕܡܐ ܠܝܘܡܢܐ) ܥܡ:
+** ܠܫܢ̈ܐ ܚܕ̈ܬܐ.
 
 ܗܢܐ ܡܢ ܟܠܐܘܣ ܒܝܪ[[#References|*]]܀
 
-== ܡ̈ܠܐ ==
-ܒܡ̈ܠܐ ܕܠܫܢܐ ܐܪܡܝܐ ܐܝܬ:
-* ܬܪܝܢ [[ܓܢܣܐ|ܓܢ̈ܣܐ]]:
-** [[ܕܟܪܐ]]
-** [[ܢܩܒܬܐ]]
-* ܬܪܝܢ [[ܡܢܝܢܐ|ܡܢܝ̈ܢܐ]]:
+== ܬܘܪܨ ܡܡܠܠܐ ==
+ܒܬܘܪܨ ܡܡܠܠܐ ܕܠܫܢܐ ܐܪܡܝܐ ܐܝܬ:
+
+* ܬܪ̈ܝܢ [[ܓܢܣܐ|ܓܢ̈ܣܝܢ]]:
+** [[ܕܟܪܢܝܐ]]
+** [[ܢܩܒܬܢܝܐ]]
+* ܬܪ̈ܝܢ [[ܡܢܝܢܐ|ܡܢܝ̈ܢܝܢ]]:
 ** [[ܚܕܢܝܐ]]
 ** [[ܣܓܝܐܢܝܐ]]
-* ܬܠܬܐ [[ܦܪܨܘܦܐ|ܦܪ̈ܨܘܦܐ]]:
+* ܬܠܬܐ [[ܦܪܨܘܦܐ|ܦܪ̈ܨܘܦܝܢ]]:
 ** [[ܦܪܨܘܦܐ ܩܕܡܝܐ]]
 ** [[ܦܪܨܘܦܐ ܬܪܝܢܐ]]
 ** [[ܦܪܨܘܦܐ ܬܠܝܬܝܐ]]
-* ܬܠܬܐ [[ܙܒܢܐ|ܙܒܢ̈ܐ]]:
+* ܬܠܬܐ [[ܙܒܢܐ|ܙܒܢ̈ܝܢ]]:
 ** [[ܙܒܢܐ ܕܥܒܪ]]
 ** [[ܙܒܢܐ ܕܩܐܡ]]
 ** [[ܙܒܢܐ ܕܥܬܝܕ]]
