--- a/ܥܪܩ.mw
+++ b/ܥܪܩ.mw
@@ -1,6 +1,6 @@
-[[ܠܦܦܐ:Bottle of Arak Rayan.jpg|thumb|250px|"ܐܪܩ ܐܠܪܝܐܢ"܄ ܓܪܒܐ ܕܥܪܩ ܡܢ ܣܘܪܝܐ]]
+[[ܠܦܦܐ:Bottle of Arak Rayan.jpg|thumb|250px|"ܥܪܩ ܐܠܪܝܐܢ" ܓܪܒܐ ܕܥܪܩ ܡܢ ܣܘܪܝܐ]]
 
-'''ܥܪܩ''' (ܡܢ [[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܝܐ]] عرق) ܗܘ ܫܟܪܐ ܨܦܝܐ ܘܠܐ ܐܬܚܠܝ ܘܠܝܬ ܠܗ ܓܘܢܐ ܕܐܬܬܥܒܕ ܡܢ ܐܬܪ̈ܘܬܐ ܕ[[ܣܘܪܝܐ]] ܘܕ[[ܠܒܢܐܢ]] ܘܕ[[ܐܝܣܪܐܝܠ]] ܘܕ[[ܥܝܪܐܩ]] ܘܕ[[ܝܘܪܕܢܢ]] ܘܕ[[ܦܠܣܛܝܢ]]܀
+'''ܥܪܩ''' (ܡܢ [[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܝܐ]] عَرَق) ܗܘ ܫܟܪܐ ܨܦܝܐ ܘܠܐ ܚܠܝܐ ܘܕܠܐ ܨܒܥܐ ܕܢܬܬܥܒܕ ܡܢ ܐܬܪ̈ܘܬܐ ܕ[[ܣܘܪܝܐ]] ܘܕ[[ܠܒܢܢ]] ܘܕ[[ܐܝܣܪܐܝܠ]] ܘܕ[[ܥܝܪܐܩ]] ܘܕ[[ܝܘܪܕܢܢ]] ܘܕ[[ܦܠܣܛܝܢ]]܀
 
 [[ar:عرق (مشروب كحولي)]]
 [[arz:عرق (مشروب كحول)]]
