*Empty MediaWiki Message*

--- a/ܡܟܬܒܢܘܬܐ_ܕܐܬܪܘܬܐ.mw
+++ b/ܡܟܬܒܢܘܬܐ_ܕܐܬܪܘܬܐ.mw
@@ -10,8 +10,8 @@
 ! ܫܡܐ ܐܢܓܠܐܝܬ
 |-
 | ܐܬܐ
-| [[ܐܦܓܐܢܣܛܐܢ]]
-| [[ܩܘܛܢܝܘܬܐ ܐܣܠܐܡܝܬܐ ܕܐܦܓܐܢܣܛܐܢ]]
+| [[ܐܦܓܢܣܬܢ]]
+| [[ܩܘܛܢܝܘܬܐ ܐܣܠܡܝܬܐ ܕܐܦܓܢܣܬܢ]]
 | [[w:he:אפגניסטן|אפגניסטן]]
 | [[w:ar:أفغانستان|أفغانستان]]
 | [[w:en:Afghanistan|Afghanistan]]
@@ -24,8 +24,8 @@
 | [[w:en:Albania|Albania]]
 |-
 | ܐܬܐ
-| [[ܓܙܐܐܪ]]
-| [[ܩܘܛܢܝܘܬܐ ܓܙܐܐܪܝܬܐ ܕܝܡܘܩܪܛܝܬܐ ܥܡܡܝܬܐ]]
+| [[ܓܙܐܪ]]
+| [[ܩܘܛܢܝܘܬܐ ܓܙܐܪܝܬܐ ܕܝܡܘܩܪܛܝܬܐ ܥܡܡܝܬܐ]]
 | [[w:he:אלג'יריה|אלג'יריה]]
 | [[w:ar:الجزائر|الجزائر]]
 | [[w:en:Algeria|Algeria]]
@@ -45,14 +45,14 @@
 | [[w:en:Angola|Angola]]
 |-
 | ܐܬܐ
-| [[ܐܢܛܝܓܘܐ ܘܒܐܪܒܘܕܐ]]
+| [[ܐܢܬܝܓܘܐ ܘܒܐܪܒܘܕܐ]]
 | [[ܐܢܛܝܓܘܐ ܘܒܐܪܒܘܕܐ]]
 | [[w:he:אנטיגואה וברבודה|אנטיגואה וברבודה]]
 | [[w:ar:أنتيغا وباربودا|أنتيغا وباربودا]] 
 | [[w:en:Antigua and Barbuda|Antigua and Barbuda]]
 |-
 | ܐܬܐ
-| [[ܐܪܓܢܛܝܢܐ]]
+| [[ܐܪܓܢܬܝܢܐ]]
 | [[ܩܘܛܢܝܘܬܐ ܐܪܓܢܛܝܢܝܬܐ]]
 | [[w:he:ארגנטינה|ארגנטינה]]
 | [[w:ar:الأرجنتين|الأرجنتين]] 
@@ -66,8 +66,8 @@
 | [[w:en:Armenia|Armenia]]
 |-
 | ܐܬܐ
-| [[ܐܘܣܛܪܠܝܐ (ܐܬܪܐ)|ܐܘܣܛܪܠܝܐ]]
-| [[ܦܘܠܝܛܝܐ ܕܐܘܣܛܪܠܝܐ]]
+| [[ܐܘܣܬܪܠܝܐ (ܐܬܪܐ)|ܐܘܣܬܪܠܝܐ]]
+| [[ܦܘܠܝܛܝܐ ܕܐܘܣܬܪܠܝܐ]]
 | [[w:he:אוסטרליה|אוסטרליה]]
 | [[w:ar:أستراليا|أستراليا]] 
 | [[w:en:Australia|Australia]]
@@ -80,15 +80,15 @@
 | [[w:en:Austria|Austria]]
 |-
 | ܐܬܐ
-| [[ܐܙܪܒܝܓܐܢ]]
-| [[ܩܘܛܢܝܘܬܐ ܕܐܙܪܒܝܓܐܢ]]
+| [[ܐܕܪܒܝܓܢ]]
+| [[ܩܘܛܢܝܘܬܐ ܕܐܕܪܒܝܓܢ]]
 | [[w:he:אזרבייג'ן|אזרבייג'ן]]
 | [[w:ar:أذربيجان|أذربيجان]] 
 | [[w:en:Azerbaijan|Azerbaijan]]
 |-
 | ܐܬܐ
-| [[ܒܗܐܡܐ]]
-| [[ܦܘܠܝܛܝܐ ܕܒܗܐܡܐ]]
+| [[ܒܗܡܐ]]
+| [[ܦܘܠܝܛܝܐ ܕܒܗܡܐ]]
 | [[w:he:בהאמה|בהאמה]]
 | [[w:ar:البهاما|البهاما]] 
 | [[w:en:Bahamas|Bahamas]]
@@ -101,15 +101,15 @@
 | [[w:en:Bahrain|Bahrain]]
 |-
 | ܐܬܐ
-| [[ܒܢܓܠܐܕܝܫ]]
-| [[ܩܘܛܢܝܘܬܐ ܥܡܡܝܬܐ ܕܒܢܓܠܐܕܝܫ]]
+| [[ܒܢܓܠܕܝܫ]]
+| [[ܩܘܛܢܝܘܬܐ ܥܡܡܝܬܐ ܕܒܢܓܠܕܝܫ]]
 | [[w:he:בנגלדש|בנגלדש]]
 | [[w:ar:بنغلاديش|بنغلاديش]] 
 | [[w:en:Bangladesh|Bangladesh]]
 |-
 | ܐܬܐ
-| [[ܒܪܒܐܕܘܣ]]
-| [[ܒܪܒܐܕܘܣ]]
+| [[ܒܪܒܕܘܣ]]
+| [[ܒܪܒܕܘܣ]]
 | [[w:he:ברבדוס|ברבדוס]]
 | [[w:ar:بربادوس|بربادوس]] 
 | [[w:en:Barbados|Barbados]]
@@ -122,8 +122,8 @@
 | [[w:en:Belarus|Belarus (White Russia)]]
 |-
 | ܐܬܐ
-| [[ܒܠܓܝܩܐ]]
-| [[ܡܠܟܘܬܐ ܕܒܠܓܝܩܐ]]
+| [[ܒܠܓܝܟܐ]]
+| [[ܡܠܟܘܬܐ ܕܒܠܓܝܟܐ]]
 | [[w:he:בלגיה|בלגיה]]
 | [[w:ar:بلجيكا|بلجيكا]] 
 | [[w:en:Belgium|Belgium]]
@@ -143,8 +143,8 @@
 | [[w:en:Benin|Benin]]
 |-
 | ܐܬܐ
-| [[ܒܗܘܛܐܢ]]
-| [[ܡܠܟܘܬܐ ܕܒܗܘܛܐܢ]]
+| [[ܒܗܘܬܢ]]
+| [[ܡܠܟܘܬܐ ܕܒܗܘܬܢ]]
 | [[w:he:בהוטן|בהוטן]]
 | [[w:ar:بوتان|بوتان]] 
 | [[w:en:Bhutan|Bhutan]]
@@ -164,8 +164,8 @@
 | [[w:en:Bosnia and Herzegovina|Bosnia and Herzegovina]]
 |-
 | ܐܬܐ
-| [[ܒܘܛܣܘܐܢܐ]]
-| [[ܩܘܛܢܝܘܬܐ ܕܒܘܛܣܘܐܢܐ]]
+| [[ܒܘܬܣܘܐܢܐ]]
+| [[ܩܘܛܢܝܘܬܐ ܕܒܘܬܣܘܐܢܐ]]
 | [[w:he:בוטסואנה|בוטסואנה]]
 | [[w:ar:بوتسوانا|بوتسوانا]] 
 | [[w:en:Botswana|Botswana]]
@@ -1379,21 +1379,21 @@
 ! ܫܡܐ ܐܢܓܠܐܝܬ
 |- 
 | ܐܬܐ
-| [[ܐܒܟܐܙܝܐ]]
+| [[ܐܒܟܙܝܐ]]
 | ܫܡܐ ܡܠܝܐ
 | אבחזיה
 | أبخازيا
 | Abkhazia
 |- 
 | ܐܬܐ
-| [[ܩܘܣܘܒܘ]]
+| [[ܟܘܣܘܒܘ]]
 | ܫܡܐ ܡܠܝܐ
 | קוסובו
 | كوسوفو
 | Republic of Kosovo
 |- 
 | ܐܬܐ
-| [[ܢܓܘܪܢܘ ܩܪܒܐܓ]]
+| [[ܢܓܘܪܢܘ ܩܪܒܓ]]
 | ܫܡܐ ܡܠܝܐ
 | נגורנו קרבאך
 | قرة باغ
@@ -1414,28 +1414,28 @@
 | State of Palestine 
 |- 
 | ܐܬܐ
-| [[ܩܘܛܢܝܘܬܐ ܥܪܒܝܬܐ ܨܚܐܪܘܝܬܐ ܕܝܡܘܩܪܛܝܬܐ]]
+| [[ܩܘܛܢܝܘܬܐ ܥܪܒܝܬܐ ܨܚܪܘܝܬܐ ܕܝܡܘܩܪܛܝܬܐ]]
 | ܫܡܐ ܡܠܝܐ
 | רפובליקת סהרה הערבית הדמוקרטית
 | الجمهورية العربية الصحراوية الديمقراطية
 | Sahrawi Arab Democratic Republic
 |- 
 | ܐܬܐ
-| [[ܨܘܡܐܠܠܢܕ]] ([[ܐܪܥ ܨܘܡܐܠ]])
+| [[ܨܘܡܐܠܠܢܕ]] ([[ܐܪܥ ܨܘܡܠ]])
 | ܫܡܐ ܡܠܝܐ
 | סומלילנד
 | أرض الصومال
 | Somaliland
 |- 
 | ܐܬܐ
-| [[ܐܘܣܛܝܐ ܬܝܡܢܝܬܐ]]
+| [[ܐܘܣܝܬܝܐ ܬܝܡܢܝܬܐ]]
 | ܫܡܐ ܡܠܝܐ
 | דרום אוסטיה
 | أوسيتيا الجنوبية
 | South Ossetia
 |- 
 | ܐܬܐ
-| [[ܩܘܛܢܝܘܬܐ ܕܨܝܢ]] ([[ܛܐܝܘܐܢ]])
+| [[ܩܘܛܢܝܘܬܐ ܕܨܝܢ]] ([[ܬܝܘܢ]])
 | ܫܡܐ ܡܠܝܐ
 | הרפובליקה הסינית (טאיוואן)
 | جمهورية الصين (تايوان) 
