--- a/ܡܟܬܒܢܘܬܐ_ܕܐܬܪܘܬܐ.mw
+++ b/ܡܟܬܒܢܘܬܐ_ܕܐܬܪܘܬܐ.mw
@@ -10,8 +10,8 @@
 ! ܫܡܐ ܐܢܓܠܐܝܬ
 |-
 | ܐܬܐ
-| [[ܐܦܓܢܣܬܢ]]
-| [[ܩܘܛܢܝܘܬܐ ܐܣܠܡܝܬܐ ܕܐܦܓܢܣܬܢ]]
+| [[ܐܦܓܐܢܣܛܐܢ]]
+| [[ܩܘܛܢܝܘܬܐ ܐܣܠܐܡܝܬܐ ܕܐܦܓܐܢܣܛܐܢ]]
 | [[w:he:אפגניסטן|אפגניסטן]]
 | [[w:ar:أفغانستان|أفغانستان]]
 | [[w:en:Afghanistan|Afghanistan]]
@@ -24,8 +24,8 @@
 | [[w:en:Albania|Albania]]
 |-
 | ܐܬܐ
-| [[ܓܙܐܪ]]
-| [[ܩܘܛܢܝܘܬܐ ܓܙܐܪܝܬܐ ܕܝܡܘܩܪܛܝܬܐ ܥܡܡܝܬܐ]]
+| [[ܓܙܐܐܪ]]
+| [[ܩܘܛܢܝܘܬܐ ܓܙܐܐܪܝܬܐ ܕܝܡܘܩܪܛܝܬܐ ܥܡܡܝܬܐ]]
 | [[w:he:אלג'יריה|אלג'יריה]]
 | [[w:ar:الجزائر|الجزائر]]
 | [[w:en:Algeria|Algeria]]
@@ -45,14 +45,14 @@
 | [[w:en:Angola|Angola]]
 |-
 | ܐܬܐ
-| [[ܐܢܬܝܓܘܐ ܘܒܐܪܒܘܕܐ]]
+| [[ܐܢܛܝܓܘܐ ܘܒܐܪܒܘܕܐ]]
 | [[ܐܢܛܝܓܘܐ ܘܒܐܪܒܘܕܐ]]
 | [[w:he:אנטיגואה וברבודה|אנטיגואה וברבודה]]
 | [[w:ar:أنتيغا وباربودا|أنتيغا وباربودا]] 
 | [[w:en:Antigua and Barbuda|Antigua and Barbuda]]
 |-
 | ܐܬܐ
-| [[ܐܪܓܢܬܝܢܐ]]
+| [[ܐܪܓܢܛܝܢܐ]]
 | [[ܩܘܛܢܝܘܬܐ ܐܪܓܢܛܝܢܝܬܐ]]
 | [[w:he:ארגנטינה|ארגנטינה]]
 | [[w:ar:الأرجنتين|الأرجنتين]] 
@@ -66,8 +66,8 @@
 | [[w:en:Armenia|Armenia]]
 |-
 | ܐܬܐ
-| [[ܐܘܣܬܪܠܝܐ (ܐܬܪܐ)|ܐܘܣܬܪܠܝܐ]]
-| [[ܦܘܠܝܛܝܐ ܕܐܘܣܬܪܠܝܐ]]
+| [[ܐܘܣܛܪܠܝܐ (ܐܬܪܐ)|ܐܘܣܛܪܠܝܐ]]
+| [[ܦܘܠܝܛܝܐ ܕܐܘܣܛܪܠܝܐ]]
 | [[w:he:אוסטרליה|אוסטרליה]]
 | [[w:ar:أستراليا|أستراليا]] 
 | [[w:en:Australia|Australia]]
@@ -80,15 +80,15 @@
 | [[w:en:Austria|Austria]]
 |-
 | ܐܬܐ
-| [[ܐܕܪܒܝܓܢ]]
-| [[ܩܘܛܢܝܘܬܐ ܕܐܕܪܒܝܓܢ]]
+| [[ܐܙܪܒܝܓܐܢ]]
+| [[ܩܘܛܢܝܘܬܐ ܕܐܙܪܒܝܓܐܢ]]
 | [[w:he:אזרבייג'ן|אזרבייג'ן]]
 | [[w:ar:أذربيجان|أذربيجان]] 
 | [[w:en:Azerbaijan|Azerbaijan]]
 |-
 | ܐܬܐ
-| [[ܒܗܡܐ]]
-| [[ܦܘܠܝܛܝܐ ܕܒܗܡܐ]]
+| [[ܒܗܐܡܐ]]
+| [[ܦܘܠܝܛܝܐ ܕܒܗܐܡܐ]]
 | [[w:he:בהאמה|בהאמה]]
 | [[w:ar:البهاما|البهاما]] 
 | [[w:en:Bahamas|Bahamas]]
@@ -101,15 +101,15 @@
 | [[w:en:Bahrain|Bahrain]]
 |-
 | ܐܬܐ
-| [[ܒܢܓܠܕܝܫ]]
-| [[ܩܘܛܢܝܘܬܐ ܥܡܡܝܬܐ ܕܒܢܓܠܕܝܫ]]
+| [[ܒܢܓܠܐܕܝܫ]]
+| [[ܩܘܛܢܝܘܬܐ ܥܡܡܝܬܐ ܕܒܢܓܠܐܕܝܫ]]
 | [[w:he:בנגלדש|בנגלדש]]
 | [[w:ar:بنغلاديش|بنغلاديش]] 
 | [[w:en:Bangladesh|Bangladesh]]
 |-
 | ܐܬܐ
-| [[ܒܪܒܕܘܣ]]
-| [[ܒܪܒܕܘܣ]]
+| [[ܒܪܒܐܕܘܣ]]
+| [[ܒܪܒܐܕܘܣ]]
 | [[w:he:ברבדוס|ברבדוס]]
 | [[w:ar:بربادوس|بربادوس]] 
 | [[w:en:Barbados|Barbados]]
@@ -122,8 +122,8 @@
 | [[w:en:Belarus|Belarus (White Russia)]]
 |-
 | ܐܬܐ
-| [[ܒܠܓܝܟܐ]]
-| [[ܡܠܟܘܬܐ ܕܒܠܓܝܟܐ]]
+| [[ܒܠܓܝܩܐ]]
+| [[ܡܠܟܘܬܐ ܕܒܠܓܝܩܐ]]
 | [[w:he:בלגיה|בלגיה]]
 | [[w:ar:بلجيكا|بلجيكا]] 
 | [[w:en:Belgium|Belgium]]
@@ -143,8 +143,8 @@
 | [[w:en:Benin|Benin]]
 |-
 | ܐܬܐ
-| [[ܒܗܘܬܢ]]
-| [[ܡܠܟܘܬܐ ܕܒܗܘܬܢ]]
+| [[ܒܗܘܛܐܢ]]
+| [[ܡܠܟܘܬܐ ܕܒܗܘܛܐܢ]]
 | [[w:he:בהוטן|בהוטן]]
 | [[w:ar:بوتان|بوتان]] 
 | [[w:en:Bhutan|Bhutan]]
@@ -164,8 +164,8 @@
 | [[w:en:Bosnia and Herzegovina|Bosnia and Herzegovina]]
 |-
 | ܐܬܐ
-| [[ܒܘܬܣܘܐܢܐ]]
-| [[ܩܘܛܢܝܘܬܐ ܕܒܘܬܣܘܐܢܐ]]
+| [[ܒܘܛܣܘܐܢܐ]]
+| [[ܩܘܛܢܝܘܬܐ ܕܒܘܛܣܘܐܢܐ]]
 | [[w:he:בוטסואנה|בוטסואנה]]
 | [[w:ar:بوتسوانا|بوتسوانا]] 
 | [[w:en:Botswana|Botswana]]
@@ -1379,21 +1379,21 @@
 ! ܫܡܐ ܐܢܓܠܐܝܬ
 |- 
 | ܐܬܐ
-| [[ܐܒܟܙܝܐ]]
+| [[ܐܒܟܐܙܝܐ]]
 | ܫܡܐ ܡܠܝܐ
 | אבחזיה
 | أبخازيا
 | Abkhazia
 |- 
 | ܐܬܐ
-| [[ܟܘܣܘܒܘ]]
+| [[ܩܘܣܘܒܘ]]
 | ܫܡܐ ܡܠܝܐ
 | קוסובו
 | كوسوفو
 | Republic of Kosovo
 |- 
 | ܐܬܐ
-| [[ܢܓܘܪܢܘ ܩܪܒܓ]]
+| [[ܢܓܘܪܢܘ ܩܪܒܐܓ]]
 | ܫܡܐ ܡܠܝܐ
 | נגורנו קרבאך
 | قرة باغ
@@ -1414,28 +1414,28 @@
 | State of Palestine 
 |- 
 | ܐܬܐ
-| [[ܩܘܛܢܝܘܬܐ ܥܪܒܝܬܐ ܨܚܪܘܝܬܐ ܕܝܡܘܩܪܛܝܬܐ]]
+| [[ܩܘܛܢܝܘܬܐ ܥܪܒܝܬܐ ܨܚܐܪܘܝܬܐ ܕܝܡܘܩܪܛܝܬܐ]]
 | ܫܡܐ ܡܠܝܐ
 | רפובליקת סהרה הערבית הדמוקרטית
 | الجمهورية العربية الصحراوية الديمقراطية
 | Sahrawi Arab Democratic Republic
 |- 
 | ܐܬܐ
-| [[ܨܘܡܐܠܠܢܕ]] ([[ܐܪܥ ܨܘܡܠ]])
+| [[ܨܘܡܐܠܠܢܕ]] ([[ܐܪܥ ܨܘܡܐܠ]])
 | ܫܡܐ ܡܠܝܐ
 | סומלילנד
 | أرض الصومال
 | Somaliland
 |- 
 | ܐܬܐ
-| [[ܐܘܣܝܬܝܐ ܬܝܡܢܝܬܐ]]
+| [[ܐܘܣܛܝܐ ܬܝܡܢܝܬܐ]]
 | ܫܡܐ ܡܠܝܐ
 | דרום אוסטיה
 | أوسيتيا الجنوبية
 | South Ossetia
 |- 
 | ܐܬܐ
-| [[ܩܘܛܢܝܘܬܐ ܕܨܝܢ]] ([[ܬܝܘܢ]])
+| [[ܩܘܛܢܝܘܬܐ ܕܨܝܢ]] ([[ܛܐܝܘܐܢ]])
 | ܫܡܐ ܡܠܝܐ
 | הרפובליקה הסינית (טאיוואן)
 | جمهورية الصين (تايوان) 
