--- a/ܒܓܕܐܕ_(ܗܘܦܪܟܝܐ).mw
+++ b/ܒܓܕܐܕ_(ܗܘܦܪܟܝܐ).mw
@@ -1,6 +1,6 @@
 [[ܠܦܦܐ:Baghdad map.svg|thumb|ܗܘܦܪܟܝܐ ܕܒܓܕܐܕ]]
 
-ܗܘܦܪܟܝܐ ܕ'''ܒܓܕܐܕ''' ܐܘ '''ܒܓܕܕ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]]: محافظة بغداد‎) ܗܝ ܗܘܦܪܟܝܐ ܒܡܨܥܐ ܕ[[ܥܝܪܐܩ]]܂ ܐܝܬ ܒܗ ܝܬܝܪ ܡܢ 6,000,000 ܐܢܫ̈ܐ܂ ܢܬܢܦܠܬ ܡܕܝܢܬܐ ܕ[[ܒܓܕܐܕ (ܡܕܝܢܬܐ)|ܒܓܕܐܕ]] [[ܐܪܫܟܝܬܐ]] ܕܥܝܪܐܩ ܒܗܕܐ ܗܘܦܪܟܝܐ܀
+ܗܘܦܪܟܝܐ ܕ'''ܒܓܕܕ''' ܐܘ '''ܒܓܕܕ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]]: محافظة بغداد‎) ܗܝ  ܗܘܦܪܟܝܐ  ܒܡܨܥܐ ܕ[[ܥܝܪܩ]]܂ ܐܝܬ ܒܗ ܝܬܝܪ ܡܢ 6,000,000 ܐܢܫ̈ܐ܂ ܢܬܢܦܠܬ ܡܕܝܢܬܐ ܕ[[ܒܓܕܕ (ܡܕܝܢܬܐ)|ܒܓܕܕ]] [[ܐܪܫܟܝܬܐ]] ܕܥܝܪܩ ܒܗܕܐ ܗܘܦܪܟܝܐ܀
 
 {{ܗܘܦܪ̈ܟܝܣ ܕܥܝܪܐܩ}}
 
