--- a/ܥܝܪܐܩ.mw
+++ b/ܥܝܪܐܩ.mw
@@ -1,22 +1,22 @@
 {{ܐܬܪܐ|
-| ܫܡܐ = ܥܝܪܩ
-| ܐܬܪܐ = جمهورية العراق<br />كۆماری عێراق<br />ܩܘܛܢܝܘܬܐ ܕܥܝܪܩ
+| ܫܡܐ = ܥܝܪܐܩ
+| ܐܬܪܐ = جمهورية العراق<br />كۆماری عێراق<br />ܩܘܛܢܝܘܬܐ ܕܥܝܪܐܩ
 | ܨܘܪܬܐ ܕܐܬܐ = Flag of Iraq.svg
 | ܨܘܪܬܐ ܕܢܝܫܐ = Coat of arms of Iraq.svg
 | ܨܘܪܬܐ ܕܨܘܪܬ ܥܠܡܐ = Iraq in its region.svg 
 | ܓܢܘܡܐ = الله أكبر<br />("ܪܒ ܐܠܗܐ")
 | ܣܘܓܝܬܐ ܐܘܡܬܢܝܬܐ = موطني<br />("ܐܬܪܝ")
 | ܝܒܫܬܐ = [[ܐܣܝܐ (ܝܒܫܬܐ)|ܐܣܝܐ]]
-| ܠܫܢܐ ܫܠܝܛܐ = [[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܝܐ]] ܘ[[ܠܫܢܐ ܩܘܪܕܝܐ|ܩܘܪܕܝܐ]] ܘ[[ܠܫܢܐ ܣܘܪܝܝܐ|ܟܠܕܝܐ܇ܐܬܘܪܝܐ]] ܘ[[ܠܫܢܐ ܬܘܪܟܡܢܝܐ ܥܝܪܩܝܐ|ܬܘܪܟܡܢܝܐ ܥܝܪܩܝܐ]]
-| ܫܡܐ ܐܘܡܬܢܝܐ = ܥܝܪܩܝܐ ܐܘ ܥܝܪܩܢܝܐ
-| ܐܪܫܟܝܬܐ = [[ܒܓܕܕ (ܡܕܝܢܬܐ)|ܒܓܕܕ]]
+| ܠܫܢܐ ܫܠܝܛܐ = [[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܝܐ]] ܘ[[ܠܫܢܐ ܩܪܕܘܝܐ|ܩܪܕܘܝܐ]] ܘ[[ܠܫܢܐ ܣܘܪܝܝܐ|ܣܘܪܝܝܐ]] ܘ[[ܠܫܢܐ ܛܘܪܩܡܢܝܐ ܥܝܪܐܩܝܐ|ܛܘܪܩܡܢܝܐ ܥܝܪܐܩܝܐ]]
+| ܫܡܐ ܐܘܡܬܢܝܐ = ܥܝܪܐܩܝܐ ܐܘ ܥܝܪܐܩܢܝܐ
+| ܐܪܫܟܝܬܐ = [[ܒܓܕܐܕ (ܡܕܝܢܬܐ)|ܒܓܕܐܕ]]
 | ܛܘܟܣܐ ܕܐܪܫܟܝܬܐ = 33°20′ ܓܪܒܝܐ 44°26′ ܡܕܢܚܐ
-| ܡܕܝܢܬܐ ܪܒܬܐ = [[ܒܓܕ (ܡܕܝܢܬܐ)|ܒܓܕܕ]]
-| ܥܡܡܐ ܐܘܡܬܢܝܐ = 75%–80% ܥܪ̈ܒܝܐ<br />15%–20% ܩܘܪܕܝܐ<br /> 5% ܐܚܪ̈ܢܐ
+| ܡܕܝܢܬܐ ܪܒܬܐ = [[ܒܓܕܐܕ (ܡܕܝܢܬܐ)|ܒܓܕܐܕ]]
+| ܥܡܡܐ ܐܘܡܬܢܝܐ = 75%–80% ܥܪ̈ܒܝܐ<br />15%–20% ܩܪ̈ܕܘܝܐ<br /> 5% ܐܚܪ̈ܢܐ
 | ܡܕܒܪܢܘܬܐ = [[ܩܘܛܢܝܘܬܐ]]
 | ܡܕܒܪܢܐ = [[ܪܝܫ ܩܘܛܢܝܘܬܐ]]
 | ܫܡܐ ܕܡܕܒܪܢܐ = - [[ܪܝܫ ܩܘܛܢܝܘܬܐ]]<br /> - [[ܪܝܫ ܘܙܝܪܐ|ܪܝܫ ܘܙܝܪ̈ܐ]]
-| ܫܡܐ ܕܫܡܐ ܕܡܕܒܪܢܐ = [[ܓܠܠ ܛܐܠܒܢܝ]]<br />[[ܢܘܪܝ ܐܠܡܠܟܝ]]
+| ܫܡܐ ܕܫܡܐ ܕܡܕܒܪܢܐ = [[ܓܗܠܐܠ ܬܐܠܗܒܐܢܝ]]<br />[[ܢܘܪܝ ܐܠܡܐܠܟܝ]]
 | ܫܘܪܝܐ = ܚܐܪܘܬܐ
 | ܓܕܫܐ ܕܫܘܪܝܐ = - ܡܢ [[ܫܘܠܛܢܐ ܥܘܬܡܢܝܐ]]<br /> - ܡܢ [[ܡܠܟܘܬܐ ܡܚܝܕܬܐ]]
 | ܙܒܢܐ ܕܫܘܪܝܐ = [[1 ܒܬܫܪܝܢ ܐ]] [[1919]]<br />[[3 ܒܬܫܪܝܢ ܐ]] [[1932]]
@@ -31,19 +31,19 @@
 | ܡܥܠܬܐ ܐܘܡܬܢܝܬܐ ܟܠܢܝܬܐ = 89,800 ܡܠܝܘܢ $
 | ܡܥܠܬܐ ܐܘܡܬܢܝܬܐ ܠܫܢܬܐ = 2005
 | ܡܥܠܬܐ ܐܘܡܬܢܝܬܐ ܠܟܠ ܐܢܫ = $3,600
-| ܙܘܙܐ = [[ܕܝܢܪܐ ܥܝܪܩܝܐ]] (IQD)
+| ܙܘܙܐ = [[ܕܝܢܪܐ ܥܝܪܐܩܝܐ]] (IQD)
 | ܦܢܝܬܐ ܕܙܒܢܐ = [[UTC]] + 3
 | ܢܕܒܪܘܢ ܒܓܢܒ = ܝܡܝܢܐ
-| ܪܡܙܐ ܕܐܢܬܪܢܝܬ = iq
-| ܡܢܝܢܐ ܕܬܠܝܦܘܢ = 964
+| ܪܡܙܐ ܕܐܢܛܪܢܛ = iq
+| ܡܢܝܢܐ ܕܛܠܦܘܢ = 964
 | ܡܬܒܝܢܢܘܬܐ =
 }}
 
-'''ܥܝܪܐܩ''' ܐܘ '''ܥܪܐܩ''' ܐܘ '''ܥܝܪܩ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]] العراق܆ [[ܠܫܢܐ ܩܘܪܕܝܐ|ܩܘܪܕܐܝܬ]] عيَراق) ܐܘ ܫܠܝܛܐܝܬ '''ܩܘܛܢܝܘܬܐ ܕܥܝܪܩ''' (ܥܪܒܐܝܬ جمهورية العراق܆ ܩܪܕܘܐܝܬ كۆماری عێراق) ܗܝ [[ܐܬܪܐ]] ܒ[[ܐܣܝܐ (ܝܒܫܬܐ)|ܐܣܝܐ]]. ܥܝܪܐܩ ܐܝܬ ܠܗ̇ ܬܚܘܡܐ ܥܡ [[ܐܝܪܢ]] ܘܥܡ [[ܬܘܪܟܝܐ]] ܘܥܡ [[ܣܘܪܝܐ]] ܘܥܡ [[ܝܘܪܕܢܢ]] ܘܥܡ [[ܣܥܘܕܝܐ]] ܘܥܡ [[ܟܘܘܝܬ (ܐܬܪܐ)|ܟܘܘܝܬ]]. ܐܢܫ̈ܐ ܒܥܝܪܐܩ ܢܡܠܠܘܢ ܥܪܒܐܝܬ ܘܩܘܪܕܘܐܝܬ ܘ[[ܠܫܢܐ ܣܘܪܝܝܐ|ܟܠܕܐܝܬ܇ܐܬܘܪܐܝܬ]] ܘ[[ܠܫܢܐ ܬܘܪܟܡܢܝܐ ܥܝܪܩܝܐ|ܬܘܪܟܡܢܐܝܬ ܥܝܪܩܝܐ]]܀
+'''ܥܝܪܐܩ''' ܐܘ '''ܥܪܐܩ''' ܐܘ '''ܥܝܪܩ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]] العراق܆ [[ܠܫܢܐ ܩܪܕܘܝܐ|ܩܪܕܘܐܝܬ]] عيَراق) ܐܘ ܫܠܝܛܐܝܬ '''ܩܘܛܢܝܘܬܐ ܕܥܝܪܐܩ''' (ܥܪܒܐܝܬ جمهورية العراق܆ ܩܪܕܘܐܝܬ كۆماری عێراق) ܗܝ [[ܐܬܪܐ]] ܒ[[ܐܣܝܐ (ܝܒܫܬܐ)|ܐܣܝܐ]]. ܥܝܪܐܩ ܐܝܬ ܠܗ̇ ܬܚܘܡܐ ܥܡ [[ܐܝܪܐܢ]] ܘܥܡ [[ܛܘܪܩܝܐ]] ܘܥܡ [[ܣܘܪܝܐ]] ܘܥܡ [[ܝܘܪܕܢܢ]] ܘܥܡ [[ܣܥܘܕܝܐ]] ܘܥܡ [[ܟܘܘܝܬ (ܐܬܪܐ)|ܟܘܘܝܬ]]. ܐܢܫ̈ܐ ܒܥܝܪܐܩ ܢܡܠܠܘܢ ܥܪܒܐܝܬ ܘܩܪܕܘܐܝܬ ܘ[[ܠܫܢܐ ܣܘܪܝܝܐ|ܣܘܪܝܐܝܬ]] ܘ[[ܠܫܢܐ ܛܘܪܩܡܢܝܐ ܥܝܪܐܩܝܐ|ܛܘܪܩܡܢܐܝܬ ܥܝܪܐܩܝܐ]]܀
 
-[[ܠܦܦܐ:Iraq.GIF|thumb|right|250px|ܨܘܪܬܐ ܕܬܚܘܡ̈ܐ ܕܐܬܪܐ ܕܥܝܪܩ ܥܡ ܡܕ̈ܝܢܬܐ ܪܘܪ̈ܒܬܐ ܘܥܡ ܢܗܪ̈ܐ ܪܘܪ̈ܒܐ]]
+[[ܠܦܦܐ:Iraq.GIF|thumb|right|250px|ܨܘܪܬܐ ܕܬܚܘܡ̈ܐ ܕܐܬܪܐ ܕܥܝܪܐܩ ܥܡ ܡܕ̈ܝܢܬܐ ܪܘܪ̈ܒܬܐ ܘܥܡ ܢܗܪ̈ܐ ܪܘܪ̈ܒܐ]]
 
-[[ܣܕܪܐ:ܥܝܪܩ| ]]
+[[ܣܕܪܐ:ܥܝܪܐܩ| ]]
 
 [[ace:Irak]]
 [[af:Irak]]
