--- a/ܓܙܪܬܐ.mw
+++ b/ܓܙܪܬܐ.mw
@@ -1,6 +1,6 @@
 [[ܠܦܦܐ:Island.jpg|thumb|200px|ܓܙܪܬܐ]]
 
-'''ܓܙܪܬܐ''' ܗܝ ܐܪܥܐ ܥܡ ܟܠ ܣܛܪ̈ܘܗܝ ܓܘ ܦܓܪܐ ܕ[[ܡܝܐ|ܡܝ̈ܐ]] ([[ܢܗܪܐ]]܄ [[ܝܡܬܐ]]܄ [[ܝܡܐ]]܄ ܐܘ [[ܐܘܩܝܢܘܣ]])܀
+'''ܓܙܪܬܐ''' ܗܝ ܩܛܥܐ ܕܐܪܥܐ ܕܟܠܗܘܢ ܣܛܪ̈ܝܗ̇ ܒܦܓܪܐ ܕ[[ܡܝܐ|ܡܝ̈ܐ]] ܐܝܟ [[ܢܗܪܐ]] ܐܘ [[ܝܡܬܐ]] ܐܘ [[ܝܡܐ]] ܐܘ [[ܐܘܩܝܢܘܣ]]܀
 
 {{ܪܬܡܐ|ܓܵܙܲܪܬܵܐ|ܓܵܙܪ̈ܵܬܼܵܐ|ܓܳܙܰܪܬ̊ܳܐ|ܓܳܙܪ̈ܳܬ̥ܳܐ}}
 
