--- a/ܥܡܐ_ܣܘܪܝܝܐ.mw
+++ b/ܥܡܐ_ܣܘܪܝܝܐ.mw
@@ -1,11 +1,11 @@
 [[ܠܦܦܐ:FlagofAssyria.svg|thumb|300px|[[ܐܬܐ]] ܕܐܬܘܪ]]
 
-'''ܐܬܘܪ̈ܝܐ''' ܐܢܘܢ ܚܕܐ ܐܘܡܬܐ ܡܢ ܐܬܪܐ ܕ[[ܐܬܘܪ]]. ܗܘ ܥܡܐ ܐܬܘܪܝܐ ܒܗܝ ܣܓܝܐܐܘܬܐ ܡܫܝܚܝܐ ܢܐ ܘܒܗܢܐ ܝܘܡܐ ܠܝܬܠܢ ܐܬܪܐ ܚܐܪܐ ܐܠܐ ܟܚܝܢ ܒܐܬܪܘܬܐ ܡܫܚܠܦܐ. ܡܢ ܥܠܬܐ ܕܩܪ̈ܒܐ ܘܩܛܠܥܡ̈ܐ ܡܐܗܙܡܐ ܡܢ ܐܬܪܐ ܕܒܝܬ ܢܗܪܝܢ ܒܡܐ ܐܠܦܒܼܬ ܒܡܢܝܢܐ܀ 
+'''ܐܬܘܪ̈ܝܐ/ܟܠܕ̈ܝܐ/ܣܘܪ̈ܝܝܐ''' ܐܢܘܢ ܚܕܐ ܐܘܡܬܐ ܡܢ ܐܬܪܐ ܕ[[ܐܬܘܪ]]. ܗܘ ܥܡܐ ܐܬܘܪܝܐ ܒܗܝ ܣܓܝܐܐܘܬܐ ܡܫܝܚܝܐ ܢܐ ܘܒܗܢܐ ܝܘܡܐ ܠܝܬܠܢ ܐܬܪܐ ܚܐܪܐ ܐܠܐ ܟܚܝܢ ܒܐܬܪܘܬܐ ܡܫܚܠܦܐ. ܡܢ ܥܠܬܐ ܕܩܪ̈ܒܐ ܘܩܛܠܥܡ̈ܐ ܡܐܗܙܡܐ ܡܢ ܐܬܪܐ ܕܒܝܬ ܢܗܪܝܢ ܒܡܐ ܐܠܦܒܼܬ ܒܡܢܝܢܐ܀ 
 
 == ܬܫܥܝܬܐ ==
-ܗܘ ܥܡܐ ܟܠܕܝܐ/ܣܘܪܝܐ ܐܝܬ ܠܗ ܡܟܬܒ-ܙܒܢܐ ܕ7000 ܫܢܝ̈ܐ ܒܐܪܥܐ ܕ[[ܒܝܬ ܢܗܪܝܢ]]. ܡܫܬܣ ܠܗ ܡܠܟܘ̈ܬܐ ܣܓܝܐܐ ܘܣܓܝ ܛܒܼܐ ܗܘܐ ܒܩܪܒܐ ܘܝܘܠܦܢܐ. ܒܬܪ ܕܗܘܢ ܡܫܝܚܝ̈ܐ ܦܠܝܓܼܝܢ ܠܬܪܬܝܢ ܓܒ̈ܐ; 
-*ܟܠܕܝܐ /ܣܘܪܝܐ ܡܥܪܒܝܐ
-* ܟܠܕܝܐ /ܣܘܪܝܐ ܡܕܢܚܝܐ
+ܗܘ ܥܡܐ ܟܠܕܝܐ/ܣܘܪܝܝܐ ܐܝܬ ܠܗ ܡܟܬܒ-ܙܒܢܐ ܕ7000 ܫܢܝ̈ܐ ܒܐܪܥܐ ܕ[[ܒܝܬ ܢܗܪܝܢ]]. ܡܫܬܣ ܠܗ ܡܠܟܘ̈ܬܐ ܣܓܝܐܐ ܘܣܓܝ ܛܒܼܐ ܗܘܐ ܒܩܪܒܐ ܘܝܘܠܦܢܐ. ܒܬܪ ܕܗܘܢ ܡܫܝܚܝ̈ܐ ܦܠܝܓܼܝܢ ܠܬܪܬܝܢ ܓܒ̈ܐ; 
+*ܣܘܪܝܐ ܡܥܪܒܝܐ
+*ܣܘܪܝܐ ܡܕܢܚܝܐ
 
 ܗܘ ܪܒܐ ܩܛܠ-ܥܡܐ ܕܣܝܡ ܒܗܘ ܥܡܐ ܐܬܘܪܝܐ܇ܟܠܕܝܐ  ܗܘ [[ܩܛܠܥܡܐ ܐܬܘܪܝܐ|ܩܛܠܥܡܐ ܕ1914]] ܗܘܐ. ܡܢ 1914 ܗܠ1923 ܩܛܝܠ ܗܘܐ ܗܠ 750.000 ܐܬܘܪܝܐ ܇ܟܠܕܝܐ ܘܬܠܝ ܗܘ ܚܘܠܡܐ ܕܐܬܘܪ ܚܐܪܬܐ ܒܗܘ ܙܒܢܐ ܗܘܐ.
 
