[[oc:Sant Jòrdi]] ܫܠܐܡܐ

--- a/ܡܪܝ_ܓܝܘܪܓܝܣ_ܣܗܕܐ.mw
+++ b/ܡܪܝ_ܓܝܘܪܓܝܣ_ܣܗܕܐ.mw
@@ -46,7 +46,7 @@
 [[nn:Heilage Jørgen]]
 [[no:Sankt Georg]]
 [[nrm:Saint George]]
-[[oc:Sant Jordi]]
+[[oc:Sant Jòrdi]]
 [[pl:Święty Jerzy]]
 [[pt:São Jorge]]
 [[ro:Sfântul Gheorghe]]
