--- a/ܐܒܪܗܡ.mw
+++ b/ܐܒܪܗܡ.mw
@@ -1,7 +1,8 @@
-[[ܠܦܦܐ:Rembrandt Harmensz. van Rijn 035.jpg|thumb|ܕܒܝܚܘܬܐ ܕ[[ܝܑܣܚܩ]], ܒܝܕ [[ܪܡܒܪܢܛ]].]]
-'''ܐܒܪܗܡ''' ([[ܥܒܪܐܝܬ]]: אברהם) ܗܘ ܢܒܝܐ ܪܒܐ [[ܝܗܘܕܝܘܬܐ|ܕܝܗܘܕܝ̈ܐ]] [[ܡܫܝܚܝܘܬܐ|ܘܡܫܝܚܝ̈ܐ]] [[ܡܫܠܡܢܘܬܐ|ܘܡܫܠܡܢ̈ܐ]]܀
+[[ܠܦܦܐ:Rembrandt Harmensz. van Rijn 035.jpg|thumb|ܕܒܝܚܘܬܐ ܕ[[ܐܝܣܚܩ]] ܒܝܕ [[ܪܡܒܪܢܛ]].]]
 
-ܐܬܼܝܠܕ ܐܒܪܗܡ ܐܝܟ [[ܟܬܒܐ ܩܢܕܝܫܐ]] ܒܡܕܝܢܬܐ ܕ[[ܐܘܪ ܕܟܠܕܝܐ]] ܘܬܒܥ ܒܘܩܕܢܐ ܕ[[ܐܠܗܐ]] ܠ[[ܚܪܢ]] ܘ[[ܟܢܥܢ]] ܘ[[ܡܨܪܝܢ]]܀
+'''ܐܒܪܗܡ''' ([[ܠܫܢܐ ܥܒܪܝܐ|ܥܒܪܐܝܬ]] אַבְרָהָם) ܗܘ ܢܒܝܐ ܪܒܐ ܕ[[ܝܗܘܕܝܘܬܐ|ܝܗܘܕ̈ܝܐ]] ܘܕ[[ܡܫܝܚܝܘܬܐ|ܡܫܝܚ̈ܝܐ]] ܘܕ[[ܐܣܠܐܡ|ܡܫܠܡ̈ܢܐ]]܀
+
+ܐܬܝܠܕ ܐܒܪܗܡ ܒ[[ܟܬܒܐ ܩܕܝܫܐ]] ܒܡܕܝܢܬܐ ܕ[[ܐܘܪ ܕܟܠܕܝܐ|ܐܘܪ ܕܟܠܕ̈ܝܐ]] ܘܬܒܥ ܠܦܘܩܕܢܗ ܕ[[ܐܠܗܐ]] ܠ[[ܚܪܢ]] ܘܠ[[ܟܢܥܢ]] ܘܠ[[ܡܨܪܝܢ]]܀
 
 [[ܣܕܪܐ:ܢܒܝܐ]]
 
