--- a/ܡܪܝ_ܓܝܘܪܓܝܣ_ܣܗܕܐ.mw
+++ b/ܡܪܝ_ܓܝܘܪܓܝܣ_ܣܗܕܐ.mw
@@ -1,6 +1,6 @@
-[[ܠܦܦܐ:Stgeorge-dragon.jpg|thumb|250px|ܨܘܪܬܐ ܕܡܪܝ ܓܝܘܪܓܝܣ ܩܛܠ ܬܢܝܢܐ]]
+[[ܠܦܦܐ:Stgeorge-dragon.jpg|thumb|250px|ܨܘܪܬܐ ܕ''[[ܡܪܝ ܓܝܘܪܓܝܣ ܘܬܢܝܢܐ]]'' ܒܝܕ [[ܓܘܣܛܒ ܡܘܪܘ]]]]
 
-'''ܡܪܝ ܓܝܘܪܓܝܣ ܣܗܕܐ''' ܗܘܐ ܐܣܛܪܛܝܘܛܐ [[ܪܗܘܡܐ|ܪܗܘܡܝܐ]] ܡܢ [[ܐܢܛܘܠܝܐ]] ([[ܛܘܪܩܝܐ]] ܝܘܡܢܐ) ܘܗܘ ܣܗܕܐ ܕܬܘܕ̈ܝܬܐ ܕ[[ܡܫܝܚܝܘܬܐ]] ܘ[[ܐܣܠܐܡ]]܀
+'''ܡܪܝ ܓܝܘܪܓܝܣ ܣܗܕܐ''' (ܐܬܝܠܕ ܒܫܢܬ 275 ܐܘ 281 ܘܡܝܬ ܒ23 ܢܝܣܢ 303) ܗܘܐ ܝܘܢܝܐ ܡܢ [[ܐܢܛܘܠܝܐ]] ([[ܛܘܪܩܝܐ]] ܝܘܡܢܐ) ܘܐܣܛܪܛܝܘܛܐ ܒܓܝܣܐ [[ܪܗܘܡܐ|ܪܗܘܡܝܐ]] ܘܗܘ ܣܗܕܐ ܕܬܘܕ̈ܝܬܐ ܕ[[ܡܫܝܚܝܘܬܐ]] ܘܕ[[ܐܣܠܐܡ]]. ܐܒܘܗܝ ܗܘܐ ܓܪܘܢܕܝܘܣ ܡܢ [[ܩܦܘܕܘܩܝܐ]] ܘܐܡܗ ܗܘܬ ܦܘܠܝܟܪܘܢܝܐ ܡܢ [[ܠܘܕ]]܀
 
 [[ܣܕܪܐ:ܩܕܝܫܐ ܕܥܕܬܐ ܕܡܕܢܚܐ|ܡܪܝ ܓܝܘܪܓܝܣ ܣܗܕܐ]]
 [[ܣܕܪܐ:ܩܕܝܫܐ ܒܡܫܝܚܝܘܬܐ ܣܘܪܝܝܬܐ]]
