r2.7.2) (ܪܘܒܘܛ: ܚܘܠܦܐ  [[ka:რედიოჰედი]] ܠ [[ka:Radiohead]]

--- a/ܪܕܝܘܗܕ.mw
+++ b/ܪܕܝܘܗܕ.mw
@@ -37,7 +37,7 @@
 [[is:Radiohead]]
 [[it:Radiohead]]
 [[ja:レディオヘッド]]
-[[ka:რედიოჰედი]]
+[[ka:Radiohead]]
 [[kn:ರೇಡಿಯೊಹೆಡ್‌]]
 [[ko:라디오헤드]]
 [[la:Radiohead]]
