--- a/ܬܠܐ_ܕܚܕ_ܐܝܠܢ.mw
+++ b/ܬܠܐ_ܕܚܕ_ܐܝܠܢ.mw
@@ -1,4 +1,4 @@
-'''ܬܠܐ ܕܚܕ ܐܝܠܢ''' ([[ܠܫܢܐ ܐܢܓܠܝܐ|ܐܢܓܠܐܝܬ]] One Tree Hill) [[ܕܪܡܐܛܝܩ]] [[ܐܘܚܕܢܐ ܡܚܝܕܐ|ܐܡܪܝܩܝܐ]] ܕܡܫܪܐ ܠܗ ܒܦܪܣܐ ܒܫܢܬܐ ܕ2003܀
+'''ܬܠܐ ܕܚܕ ܐܝܠܢ''' ([[ܠܫܢܐ ܐܢܓܠܝܐ|ܐܢܓܠܐܝܬ]] One Tree Hill) [[ܕܪܡܐ]] [[ܐܘܚܕܢܐ ܡܚܝܕܐ|ܐܡܪܝܩܝܐ]] ܕܫܪܐ ܒܦܪܣܐ ܒܫܢܬܐ ܕ2003܀
 
 [[bg:Самотно дърво на хълма]]
 [[ca:Les frére scott]]
