--- a/ܦܪܣ_ܚܙܘܐ.mw
+++ b/ܦܪܣ_ܚܙܘܐ.mw
@@ -1,4 +1,4 @@
-'''ܦܪܣ ܚܙܘܐ''' ܐܘ '''ܛܠܦܝܣܝܘܢ''' ܐܘ '''ܛܠܒܝܙܝܐ''' (ܡܢ [[ܠܫܢܐ ܝܘܢܝܐ ܥܬܝܩܐ|ܝܘܢܝܐ ܥܬܝܩܐ]]: τῆλε "ܡܢ ܪܘܚܩܐ" ܘܡܢ [[ܠܫܢܐ ܠܐܛܝܢܝܐ|ܠܐܛܝܢܝܐ]]: visio "ܚܙܘܐ") ܗܝ [[ܛܟܢܘܠܘܓܝܐ]] ܠܡܫܕܪܘ ܠܨܘܪ̈ܬܐ ܘܠܩ̈ܠܐ܀
+'''ܦܪܣ ܚܙܘܐ''' ܐܘ '''ܛܠܦܝܣܝܘܢ''' ܐܘ '''ܛܠܒܝܙܝܐ''' (ܡܢ [[ܠܫܢܐ ܝܘܢܝܐ ܥܬܝܩܐ|ܝܘܢܝܐ ܥܬܝܩܐ]]: τῆλε "ܡܢ ܪܘܚܩܐ" ܘܡܢ [[ܠܫܢܐ ܠܐܛܝܢܝܐ|ܠܐܛܝܢܝܐ]]: visio "ܚܙܘܐ") ܗܝ [[ܛܟܢܘܠܘܓܝܐ]] ܠܡܫܕܪܘ ܨܘܪ̈ܬܐ ܘܩ̈ܠܐ܀
 
 == ܐܦ ܚܙܝ ==
 * [[ܡܐܟܢܐ ܕܦܪܣ ܚܙܘܐ]]
