--- a/ܐܟܪܐ.mw
+++ b/ܐܟܪܐ.mw
@@ -1,5 +1,8 @@
-[[ܠܦܦܐ:Farmer plowing.jpg|thumb|ܐܟܪܐ]]
-'''ܐܟܪܐ''' ܗܘ ܐܢܫܐ ܕܐܝܬ ܠܗ ܫܕܬܐ ܕ[[ܙܪܥܐ]] ܕ[[ܐܪܥܐ]]. ܐܟܪܘܬܐ ܐܝܬܗܘܝ ܫܕܬܐ ܥܬܝܩ ܡܢ ܟܠ ܒܬܫܥܝܬܐ [[ܒܪ ܢܫܐ|ܕܒܪܢܫܘܬܐ]]܀
+[[ܠܦܦܐ:Farmer plowing.jpg|thumb|ܐܟܪܐ ܕܦܠܚ ܥܡ ܒܥܝܪ̈ܘܗܝ ܒܚܩܠܐ]]
+
+'''ܐܟܪܐ''' (ܡܢ [[ܠܫܢܐ ܐܟܕܝܐ]] ikkaru) ܗܘ ܐܢܫܐ ܕܐܝܬ ܠܗ ܫܕܬܐ ܕ[[ܙܪܥܐ]] ܕ[[ܐܪܥܐ]]. ܐܟܪܘܬܐ ܐܝܬܝܗ̇ ܫܕܬܐ ܥܬܝܩܐ ܡܢ ܟܠ ܒܬܫܥܝܬܐ ܕ[[ܒܪ ܐܢܫܐ|ܒܪܢܫܘܬܐ]]܀
+
+{{ܪܬܡܐ|ܐܲܟܵܪܵܐ|ܐܲܟܵܪܹ̈ܐ|ܐܰܟܳܪܳܐ|ܐܰܟܳܪ̈ܶܐ}}
 
 {{commonscat|Farmers}}
 
