--- a/ܓܘܓܝ.mw
+++ b/ܓܘܓܝ.mw
@@ -1,8 +1,8 @@
 [[ܠܦܦܐ:Australian_orb_weaver_spinning_web.jpg|thumb|ܓܘܓܝ]]
 
-'''ܓܘܓܝ''' ܟܢܘܫܝܐ: '''ܓܘܓܝ̈''' ([[ܣܘܕܝܐ|ܣܘܕܐܝܬ]] ܙܵܩܲܪ ܩܵܘܕܹ̈ܐ) ܗܝ [[ܚܝܘܬܐ]] ܙܥܘܪܬܐ ܕܐܝܬ ܠܗ ܬܡܢܐ [[ܪܓܠܐ|ܪ̈ܓܠܐ]]܂ ܬܙܩܘܪ [[ܢܘܠܐ ܕܓܘܓܝ|ܢܘܠܐ]] ܚܝܠܬܢܐ܀
+'''ܓܘܓܝ''' (ܟܢܘܫܝܐ: '''ܓܘܓܝ̈'''܆ [[ܣܘܕܝܐ|ܣܘܕܐܝܬ]] ܙܵܩܲܪ ܩܵܘܕܹ̈ܐ) ܗܝ [[ܚܝܘܬܐ]] ܙܥܘܪܬܐ ܕܐܝܬ ܠܗ̇ ܬܡܢܐ [[ܪܓܠܐ|ܪ̈ܓܠܝܢ]]. ܬܙܩܘܪ [[ܢܘܠܐ ܕܓܘܓܝ|ܢܘܠܐ]] ܚܝܠܬܢܐ܀
 
-{{ܪܬܡܐ|ܓܘܵܓ݂ܲܝ|ܓܘܵܓ݂ܲܝ̈|ܓܘܳܓ̥ܰܝ|ܓܘܳܓ̥ܰܝ̈}}
+{{ܪܬܡܐ|ܓܘܵܓܲܝ|ܓܘܵܓܲܝ̈|ܓܘܳܓ̥ܰܝ|ܓܘܳܓ̥ܰܝ̈}}
 
 [[ܣܕܪܐ:ܚܝܘܬܐ]]
 
