*Empty MediaWiki Message*

--- a/ܣܕܪܐ:ܦܛܪܝܪܟܘ_ܕܥܕܬܐ_ܣܘܪܝܝܬܐ_ܩܬܘܠܝܩܝܬܐ.mw
+++ b/ܣܕܪܐ:ܦܛܪܝܪܟܘ_ܕܥܕܬܐ_ܣܘܪܝܝܬܐ_ܩܬܘܠܝܩܝܬܐ.mw
@@ -1,11 +1,12 @@
-{{Commonscat|Syriac Catholic Patriarchs of Antioch}}
+{{Commonscat|Chaldean Catholic Patriarchs}}
 
 [[ܣܕܪܐ:ܦܛܪܝܪܟܘ]]
 
-[[ar:تصنيف:بطاركة الكنيسة السريانية الكاثوليكية]]
-[[de:Kategorie:Syrisch-katholischer Patriarch]]
-[[en:Category:Syriac Catholic Patriarchs of Antioch]]
-[[fr:Catégorie:Patriarche catholique syriaque d'Antioche]]
-[[nl:Categorie:Syrisch-katholiek patriarch van Antiochië]]
-[[no:Kategori:Syrisk-katolske patriarker av Antiokia]]
-[[ru:Категория:Патриархи Сирийской католической церкви]]
+[[ar:تصنيف:بطاركة الكنيسة الكلدانية الكاثوليكية]]
+[[fr:Catégorie:Patriarche catholique chaldéen de Babylone]]
+[[it:Categoria:Patriarchi di Babilonia dei Caldei]]
+[[la:Categoria:Patriarchae Babylonenses]]
+[[nl:Categorie:Chaldeeuws-katholiek patriarch van Babylon]]
+[[pl:Kategoria:Chaldejscy patriarchowie Babilonu]]
+[[pt:Categoria:Patriarcas da Igreja Católica Caldeia]]
+[[ru:Категория:Патриархи Халдейской католической церкви]]
