--- a/ܥܡܢܘܐܝܠ_ܬܠܝܬܝܐ_ܕܠܝ.mw
+++ b/ܥܡܢܘܐܝܠ_ܬܠܝܬܝܐ_ܕܠܝ.mw
@@ -3,6 +3,8 @@
 == ܐܦ ܚܙܝ ==
 *[[ܡܪܝ ܕܢܚܐ ܪܒܝܥܝܐ]]
 
+[[ܣܕܪܐ:ܦܛܪܝܪܟܘ ܕܥܕܬܐ ܟܠܕܝܬܐ ܩܬܘܠܝܩܝܬܐ]]
+
 [[ar:عمانوئيل الثالث دلي]]
 [[cs:Emmanuel III. Delly]]
 [[de:Emmanuel III. Delly]]
