*Empty MediaWiki Message*

--- a/ܥܡܢܘܐܝܠ_ܬܠܝܬܝܐ_ܕܠܝ.mw
+++ b/ܥܡܢܘܐܝܠ_ܬܠܝܬܝܐ_ܕܠܝ.mw
@@ -1,4 +1,4 @@
-'''‏ܡܪܝ ܥܡܢܘܐܝܠ ܬܠܝܬܝܐ ܕܠܝ''' ‏‏ܗܘ [[ܦܛܪܝܪܟܐ]] ܕ[[ܥܕܬܐ ‏‏ܩܕܝܫܬܐ ܕܟܠܕܝܐ]]܀
+'''‏ܡܪܝ ܥܡܢܘܐܝܠ ܬܠܝܬܝܐ ܕܠܝ''' ‏‏ܗܘܐ [[ܦܛܪܝܪܟܐ]] ܕ[[ܥܕܬܐ ‏‏ܩܕܝܫܬܐ ܕܟܠܕܝܐ]]܀
 
 == ܐܦ ܚܙܝ ==
 *[[ܡܪܝ ܕܢܚܐ ܪܒܝܥܝܐ]]
