*Empty MediaWiki Message*

--- a/ܥܕܬܐ_ܟܠܕܝܬܐ_ܩܬܘܠܝܩܝܬܐ.mw
+++ b/ܥܕܬܐ_ܟܠܕܝܬܐ_ܩܬܘܠܝܩܝܬܐ.mw
@@ -1,5 +1,5 @@
 [[ܠܦܦܐ:صرتثي.jpg|thumb|ܛܘܦܣܐ ܕܥܕܬܐ ܟܠܕܝܬܐ ܩܬܘܠܝܩܝܬܐ]]
-'''ܥܕܬܐ ܟܠܕܝܬܐ ܩܬܘܠܝܩܝܬܐ''' ܗܝ ܡܢܬܐ ܡܢ [[ܥܕܬܐ ܕܡܕܢܚܐ]] ܕܐܣܪ ܥܡ [[ܥܕܬܐ ܩܬܘܠܝܩܝܬܐ ܕܪܗܘܡܝܐ|ܥܕܬܐ ܩܬܘܠܝܩܝܬܐ ܕܪ̈ܗܘܡܝܐ]]. [[ܡܪܝ ܥܡܢܘܐܝܠ ܬܠܝܬܝܐ ܕܠܝ]] ܗܘ ܩܬܘܠܝܩܐ ܦܛܪܝܪܟܝܣ ܕܥܕܬܐ ܟܠܕܝܬܐ܀
+'''ܥܕܬܐ ܟܠܕܝܬܐ ܩܬܘܠܝܩܝܬܐ''' ܗܝ ܡܢܬܐ ܡܢ [[ܥܕܬܐ ܕܡܕܢܚܐ]] ܕܐܣܪ ܥܡ [[ܥܕܬܐ ܩܬܘܠܝܩܝܬܐ ܕܪܗܘܡܝܐ|ܥܕܬܐ ܩܬܘܠܝܩܝܬܐ ܕܪ̈ܗܘܡܝܐ]]. ܡܪܝ [[ܠܘܝܣ ܪܘܦܐܝܠ ܩܕܡܝܐ ܣܟܘ]] ܗܘ ܩܬܘܠܝܩܐ ܦܛܪܝܪܟܝܣ ܕܥܕܬܐ ܟܠܕܝܬܐ܀
 
 == ܐܦ ܚܙܝ ==
 * [[ܟܠܕܝܐ]]
