--- a/ܩܠܒܐ:ܡܦܠܚܢܐ.mw
+++ b/ܩܠܒܐ:ܡܦܠܚܢܐ.mw
@@ -1,4 +1,4 @@
-[[ܡܦܠܚܢܐ:{{{1}}}|{{{1}}}]] ([[ܡܡܠܠܐ_ܕܡܦܠܚܢܐ:{{{1}}}|ܡܡܠܠܐ]] • [[ܕܝܠܢܝܐ:ܫܘܬܦܘܝܬ̈ܐ/{{{1}}}|ܫܘܬܦܘܝܬ̈ܐ]])<noinclude>>
+[[ܡܦܠܚܢܐ:{{{1}}}|{{{1}}}]] ([[ܡܡܠܠܐ_ܕܡܦܠܚܢܐ:{{{1}}}|ܡܡܠܠܐ]] • [[ܕܝܠܢܝܐ:ܫܘܬܦܘܬ̈ܐ/{{{1}}}|ܫܘܬܦܘܬ̈ܐ]])<noinclude>>
 [[ar:قالب:مس]]
 [[eo:Ŝablono:Uzanto2]]
 [[id:Templat:Pengguna]]
