--- a/ܠܘܝܣ_ܪܘܦܐܝܠ_ܩܕܡܝܐ_ܣܟܘ.mw
+++ b/ܠܘܝܣ_ܪܘܦܐܝܠ_ܩܕܡܝܐ_ܣܟܘ.mw
@@ -1,5 +1,4 @@
-ܡܪܝ '''ܠܘܝܣ ܪܘܦܐܝܠ ܩܕܡܝܐ ܣܟܘ''' (ܐܬܝܠܕ ܒ[[ܙܟܘ]] ܒ 4 ܚܙܝܪܢ 1948) ܗܘ [[ܦܛܪܝܪܟܐ]] ܕ[[ܥܕܬܐ ܟܠܕܝܬܐ ܩܬܘܠܝܩܝܬܐ]]܀
-ܐܬܣܝܡ ܟܗܢܐ ܒܫܢܬ 1974 ܘܦܝܫ ܪܝܫ ܟܗܢܵܐ ܕ[[ܟܪܟܐ ܕܒܝܬ ܣܠܘܟ]] ܒܫܢܬ 2003܂ ܐܬܓܒܐ ܠܘܝܣ ܣܟܘ ܦܛܪܝܪܟܐ ܥܠ ܟܠܕܝܵܐ ܒ1 ܕܫܒܛ ܒܫܢܬ 2013 ܒ[[ܪܗܘܡܐ]]܀
+ܡܪܝ '''ܠܘܝܣ ܪܘܦܐܝܠ ܩܕܡܝܐ ܣܟܘ''' (ܐܬܝܠܕ ܒ[[ܙܟܘ]] ܒ 4 ܒܚܙܝܪܢ 1948) ܗܘ [[ܦܛܪܝܪܟܐ]] ܕ[[ܥܕܬܐ ܟܠܕܝܬܐ ܩܬܘܠܝܩܝܬܐ]]. ܐܣܬܝܡ ܟܗܢܐ ܒܫܢܬ 1974 ܘܦܝܫ ܪܝܫ ܟܗܢܵܐ ܕ[[ܟܪܟܐ ܕܒܝܬ ܣܠܘܟ]] ܒܫܢܬ 2003܂ ܐܦܣܩܘܦ̈ܐ ܕܥܕܬܐ ܐܬܓܒܘ ܠܘܝܣ ܣܟܘ ܦܛܪܝܪܟܐ ܥܠ ܥܕܬܐ ܕܡܕܢܚܐ ܟܠܕܝܬܐ ܒ1 ܒܫܒܛ ܒܫܢܬ 2013 ܒ[[ܪܗܘܡܐ]]܀
 
 [[ܣܕܪܐ:ܦܛܪܝܪܟܘ ܕܥܕܬܐ ܟܠܕܝܬܐ ܩܬܘܠܝܩܝܬܐ]]
 
