*Empty MediaWiki Message*

--- a/ܐܝܕܐ.mw
+++ b/ܐܝܕܐ.mw
@@ -1,3 +1,4 @@
+[[File:Tupaia cf javanica 050917 manc.jpg|thumb|Tupaia javanica, Homo sapiens]]
 '''ܐܝܕܐ''' (ܟܢܘܫܝܐ: '''ܐܝܕ̈ܐ''' ܐܘ '''ܐܝܕ̈ܝܐ''' ܐܘ '''ܐܝܕ̈ܘܬܐ''' ܐܘ '''ܐܝܕ̈ܗܬܐ'''܄ ܓܕܡܐ ܩܕܡܝܐ: '''ܝܕ'''܄ ܓܕܡܐ ܬܪܝܢܐ: '''ܝܕ''' ܐܘ '''ܐܝܕ''') ܗܝ [[ܗܕܡܐ ܒܪܝܐ]] ܒܓܘܫܡܐ ܕ[[ܒܪܢܫܐ]] ܘܕ[[ܚܝܘܬܐ|ܚܝܘܬ̈ܐ]] ܕܡܣܝܟܐ ܠ[[ܕܪܥܐ]] ܘܐܣܝܪܬܐ ܠ[[ܟܢܘܢܬܐ ܕܐܝܕܐ|ܟܢܘܢܬܐ]]. ܠܟܠ ܝܕ ܕܐܢܫܐ ܐܝܬ ܠܗ ܚܡܫ [[ܨܒܥܐ|ܨܒ̈ܥܝܢ]]: [[ܟܪܬܐ]] ܘ[[ܡܛܘܚܬܐ]] ܘ[[ܡܨܥܝܬܐ (ܨܒܥܐ)|ܡܨܥܝܬܐ]] ܘ[[ܒܨܪܐ (ܨܒܥܐ)|ܒܨܪܐ]] ܘ[[ܚܨܪܐ]]܀
 
 {{ܪܬܡܐ|ܐܝܼܕ݂ܵܐ|ܐܝܼܕ݂ܹ̈ܐ ܐܘ ܐܝܼܕ̈ܲܝܵܐ ܐܘ ܐܝܼܕ̈ܲܘܵܬ݂ܵܐ ܐܘ ܐܝܼܕ̈ܲܗܵܬ݂ܵܐ|ܐܺܝܕ݂ܳܐ|ܐܺܝܕ݂̈ܶܐ ܐܘ ܐܺܝܕ݂̈ܰܝܳܐ ܐܘ ܐܺܝܕ݂̈ܰܘܳܬ݂ܳܐ ܐܘ ܐܺܝܕ݂̈ܰܗܳܬ݂ܳܐ}}
