--- a/ܙܠܛܐ.mw
+++ b/ܙܠܛܐ.mw
@@ -1,6 +1,8 @@
-[[ܠܦܦܐ:Cold meat salad.jpg|thumb|ܒܣܪܐ ܩܪܝܪܐ ܙܠܛܐ]]
+[[ܠܦܦܐ:Cold meat salad.jpg|thumb|ܙܠܛܐ ܕܒܣܪܐ ܩܪܝܪܐ]]
 
-'''ܙܠܛܐ''' ܗܘ [[ܡܐܟܘܠܬܐ]]܂ ܓܘܐ܄ ܐܝܬ [[ܛܘܡܛܐ]]܄ [[ܚܣܐ]]܄ [[ܒܨܠܐ]]܄ [[ܦܛܘܪܬܐ]]܄ ܘܐܚܪܢܐ ܡܢܕܝ܀
+'''ܙܠܛܐ''' ܐܘ '''ܣܠܛܐ''' ܗܘ [[ܡܐܟܘܠܬܐ]]. ܐܝܬ ܒܗ [[ܛܘܡܛܐ]] ܘ[[ܚܣܬܐ]] ܘ[[ܒܨܠܐ]] ܘ[[ܦܛܘܪܬܐ]] ܘܡܕ̈ܡ ܐܚܪ̈ܢܐ܀
+
+[[ܣܕܪܐ:ܡܐܟܘܠܬܐ]]
 
 [[an:Apanyizo]]
 [[ar:سلطة]]
