--- a/ܥܕܬܐ_ܡܪܘܢܝܬܐ.mw
+++ b/ܥܕܬܐ_ܡܪܘܢܝܬܐ.mw
@@ -1,6 +1,6 @@
 {{ܨܢܕܘܩ ܥܕܬܐ ܡܕܢܚܝܬܐ
 | ܫܡܐ = ܥܕܬܐ ܡܪܘܢܝܬܐ
-| ܨܘܪܬܐ = Maroun04.jpg
+| ܨܘܪܬܐ = St._Maron.jpg
 | ܟܬܝܒܬܐ = ܡܪܝ ܡܪܘܢ܇ ܡܩܝܡܢܐ ܕܥܕܬܐ ܡܪܘܢܝܬܐ
 | ܥܕܬܐ ܐܡܗܝܬܐ = ܥܕܬܐ ܣܘܪܝܝܬܐ
 | ܫܢܬܐ ܕܫܬܐܣܬܐ = 450
