--- a/ܐܓܢܛܝܘܣ_ܝܘܣܦ_ܬܠܝܬܝܐ_ܝܘܢܢ.mw
+++ b/ܐܓܢܛܝܘܣ_ܝܘܣܦ_ܬܠܝܬܝܐ_ܝܘܢܢ.mw
@@ -1,4 +1,4 @@
-ܡܪܝ '''ܐܓܢܛܝܘܣ ܝܘܣܦ ܬܠܝܬܝܐ ܝܘܢܢ''' (ܐܬܝܠܕ 15 [[ܬܫܪܝܢ ܒ]] 1944)، ܗܘ [[ܦܛܪܝܪܟܐ]] ܘܪܝܫܐ ܕ[[ܥܕܬܐ ܣܘܪܝܝܬܐ ܩܬܘܠܝܩܝܬܐ]]. ܐܬܝܠܕ [[ܚܣܟܗ (ܡܕܝܢܬܐ)]] ܒ[[ܣܘܪܝܐ]] ܘܐܬܣܝܡ ܟܗܢܐ ܒܫܢܬ 1971. ܐܬܪܫܡ ܐܦܝܣܩܘܦܐ ܥܠ ܡܪܥܝܬܐ ܕܣܘܪ̈ܝܝܐ ܩܬܘܠܝ̈ܩܝܐ ܒ[[ܐܡܪܝܩܐ]] ܒ1995܀
+ܡܪܝ '''ܐܓܢܛܝܘܣ ܝܘܣܦ ܬܠܝܬܝܐ ܝܘܢܢ''' (ܐܬܝܠܕ 15 ܒ[[ܬܫܪܝܢ ܒ]] 1944)، ܗܘ [[ܦܛܪܝܪܟܐ]] ܘܪܝܫܐ ܕ[[ܥܕܬܐ ܣܘܪܝܝܬܐ ܩܬܘܠܝܩܝܬܐ]]. ܐܬܝܠܕ ܒܡܕܝܢܬܐ ܕ[[ܚܣܟܗ (ܡܕܝܢܬܐ)|ܚܣܟܗ]] ܒ[[ܣܘܪܝܐ]] ܘܐܣܬܝܡ ܟܗܢܐ ܒܫܢܬ 1971. ܐܬܪܫܡ ܐܦܝܣܩܘܦܐ ܥܠ ܡܪܥܝܬܐ ܕܣܘܪ̈ܝܝܐ ܩܬܘܠܝ̈ܩܝܐ ܒ[[ܐܘܚܕܢܐ ܡܚܝܕܐ|ܐܘܚܕ̈ܢܐ ܡܚܝܕ̈ܐ ܕܐܡܪܝܩܐ]] ܒܫܢܬ 1995܀
 
 ܐܬܓܒܝ ܥܠ ܦܛܪܝܪܟܘܬܐ ܕܥܕܬܐ ܣܘܪܝܝܬܐ ܩܬܘܠܝܩܝܬܐ ܒ20 ܟܢܘܢ ܒ 2009܀
 
