*Empty MediaWiki Message*

--- a/ܝܘܢ.mw
+++ b/ܝܘܢ.mw
@@ -46,7 +46,9 @@
 {{ܪܬܡܐ|ܝܲܘܵܢ|ܠܝܬ|ܝܰܘܳܢ|ܠܝܬ}}
 
 [[ܣܕܪܐ:ܝܘܢ]]
-
+{{Link FA|vi}}
+{{Link FA|uk}}
+{{Link GA|hy}}
 [[ab:Барзентәыла]]
 [[ace:Yunani]]
 [[af:Griekeland]]
