ܠܦܦܐ "Melek_taus.png" ܐܬܬܠܚܝ, ܐܬܡܫܝ ܡܢ ܩܘܡܡܘܢܣ ܒܝܕ [[commons:User:INeverCry|INeverCry]] ܒܥܠܬܐ ܕ: Per [[commons:Commons:Deletion requests/File:Melek taus.png]].

--- a/ܩܠܒܐ:ܡܦܐܬܐ_ܕܬܘܕܝܬܐ.mw
+++ b/ܩܠܒܐ:ܡܦܐܬܐ_ܕܬܘܕܝܬܐ.mw
@@ -6,7 +6,7 @@
 |width="17%"| <div align=center>[[ܠܦܦܐ:IslamSymbol.svg|50px|link=ܬܪܥܐ:ܐܣܠܐܡ]]</div>
 |width="17%"| <div align=center>[[ܠܦܦܐ:Christian cross.svg|40px]]</div>
 |width="16%"| <div align=center>[[ܠܦܦܐ:Menorah7a.png|60px]]</div>
-|width="17%"| <div align=center>[[ܠܦܦܐ:Melek_taus.png|60px]]</div>
+|width="17%"| <div align=center></div>
 |width="17%"| <div align=center>[[ܠܦܦܐ:Bahaistar.jpg|60px]]</div>
 |-
 | '''[[ܐܣܠܐܡ]]'''
