--- a/ܐܠܟܣܢܕܪܝܐ.mw
+++ b/ܐܠܟܣܢܕܪܝܐ.mw
@@ -1,4 +1,6 @@
-'''ܐܠܟܣܢܕܪܝܐ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]] الإسكندرية) ܗܝ ܡܕܝܢܬܐ ܕܬܪܬܝܢ ܒܪܒܘܬܐ ܒ[[ܡܨܪܝܢ]]. ܐܝܬ ܝܬܝܪ ܡܢ 4،000،000 ܐܢܫ̈ܐ ܒܐܠܟܣܢܕܪܝܐ ܝܘܡܢܐ܀
+[[ܠܦܦܐ:AlexandriaMap1.jpg|ܙܥܘܪܬܐ|ܣܡܠܐ|ܠܟܣܢܕܪܝܐ ܒܓܘܢܐ ܫܥܘܐ]]
+
+'''ܐܠܟܣܢܕܪܝܐ''' ([[ܠܫܢܐ ܥܪܒܝܐ|ܥܪܒܐܝܬ]]̣: الإسكندرية) ܗܝ ܡܕܝܢܬܐ ܕܬܪܬܝܢ ܒܪܒܘܬܐ ܒ[[ܡܨܪܝܢ]]. ܐܝܬ ܝܬܝܪ ܡܢ 4،000،000 ܐܢܫ̈ܝܢ ܒܐܠܟܣܢܕܪܝܐ ܝܘܡܢܐ܀
 
 [[ܣܕܪܐ:ܡܨܪܝܢ]]
 
