*Empty MediaWiki Message*

--- a/ܠܫܢܐ_ܥܒܪܝܐ.mw
+++ b/ܠܫܢܐ_ܥܒܪܝܐ.mw
@@ -1,14 +1,14 @@
 [[ܠܦܦܐ:Penteteuch2.jpg|thumb|200px|ܟܬܒܐ ܥܒܪܝܐ]]
 
-'''ܠܫܢܐ ܥܒܪܝܐ''' ܐܘ '''ܥܒܪܝܬ''' (עברית) ܗܘ [[ܠܫܢܐ (ܡܡܠܠܐ)|ܠܫܢܐ]] ܕܢܬܡܠܠ ܒ[[ܐܝܣܪܐܝܠ]] ܘܕܗܘ ܠܫܢܐ ܩܕܝܫܐ ܕܬܘܕܝܬܐ ܕ[[ܝܗܘܕܝܘܬܐ]]܂ ܢܕܡܐ ܠܫܢܐ ܥܒܪܝܐ ܠ[[ܠܫܢܐ ܐܪܡܝܐ]] ܘܠ[[ܠܫܢܐ ܥܪܒܝܐ]] ܘܠ[[ܠܫܢܐ ܫܝܡܝܐ|ܠܫ̈ܢܐ ܫܝܡ̈ܝܐ]] ܐܚܪ̈ܢܐ. ܠܫܢܐ ܥܒܪܝܐ ܥܬܝܩܐ ܗܘ ܝܬܝܪ܂ ܒܥܒܪܝܐ ܡܬܟܬܒܐ ܗܘܬ [[ܕܝܬܝܩܝ ܥܬܝܩܬܐ]]܀
-
+'''ܠܫܢܐ ܥܒܪܝܐ''' ܐܘ '''ܥܒܪܝܬ''' (עברית) ܗܘ [[ܠܫܢܐ (ܡܡܠܠܐ)|ܠܫܢܐ]] ܕܢܬܡܠܠ ܒ[[ܐܝܣܪܐܝܠ]] ܘܕܗܘ ܠܫܢܐ ܩܕܝܫܐ ܕܬܘܕܝܬܐ ܕ[[ܝܗܘܕܝܘܬܐ]]܂ ܢܕܡܐ ܠܫܢܐ ܥܒܪܝܐ ܠ[[ܠܫܢܐ ܐܪܡܝܐ]] ܘܠ[[ܠܫܢܐ ܥܪܒܝܐ]] ܘܠ[[ܠܫܢܐ ܫܝܡܝܐ|ܠܫ̈ܢܐ ܫܝܡ̈ܝܐ]] ܐܚܪ̈ܢܐ. ܠܫܢܐ ܥܒܪܝܐ ܥܬܝܩܐ ܗܘ ܝܬܝܪ܂ ܒܥܒܪܝܐ ܡܬܟܬܒܐ ܗܘܬ [[ܕܝܬܝܩܝ ܥܝܩܬܐ]]܀
+בויקיפדיה העברית יש ערך יותר גדול
 [[ܣܕܪܐ:ܠܫܢܐ|ܥܒܪܝܐ]]
-[[ܣܕܪܐ:ܠܫܢܐ ܥܒܪܝܐ]]
+[[ܣܕܪܐ:ܠܫܐ ܥܒܪܝܐ]]
 
 [[ab:Иврит]]
 [[af:Hebreeus]]
 [[als:Hebräische Sprache]]
-[[am:ዕብራይስጥ]]
+[[am:ዕብስጥ]]
 [[an:Idioma hebreu]]
 [[ang:Hebrēisc sprǣc]]
 [[ar:لغة عبرية]]
