*Empty MediaWiki Message*

--- a/ܥܡܐ_ܣܘܪܝܝܐ.mw
+++ b/ܥܡܐ_ܣܘܪܝܝܐ.mw
@@ -1,4 +1,4 @@
-[[ܠܦܦܐ:FlagofAssyria.svg|thumb|300px|[[ܐܬܐ]] ܕܐܬܘܪ]]
+[[ܠܦܦܐ:Flag of the Suryoye (Arameans and Assyrians).png|thumb|300px|[[ܐܬܐ]] ܕܐܬܘܪ]]
 
 '''ܐܬܘܪ̈ܝܐ/ܟܠܕ̈ܝܐ/ܣܘܪ̈ܝܝܐ''' ܐܢܘܢ ܚܕܐ ܐܘܡܬܐ ܡܢ ܐܬܪܐ ܕ[[ܐܬܘܪ]]. ܗܘ ܥܡܐ ܐܬܘܪܝܐ ܒܗܝ ܣܓܝܐܐܘܬܐ ܡܫܝܚܝܐ ܢܐ ܘܒܗܢܐ ܝܘܡܐ ܠܝܬܠܢ ܐܬܪܐ ܚܐܪܐ ܐܠܐ ܟܚܝܢ ܒܐܬܪܘܬܐ ܡܫܚܠܦܐ. ܡܢ ܥܠܬܐ ܕܩܪ̈ܒܐ ܘܩܛܠܥܡ̈ܐ ܡܐܗܙܡܐ ܡܢ ܐܬܪܐ ܕܒܝܬ ܢܗܪܝܢ ܒܡܐ ܐܠܦܒܼܬ ܒܡܢܝܢܐ܀ 
 
